--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -46,7 +46,6 @@ bg:
   see users badges: "Виж всички значки на %{username}"
   followers: "Последователи"
   following: "Следвани"
-  highlight: "Маркирай"
   bookmark: "Отбелязване"
   earned badge date: "Спечелени от %{username} преди %{ago}"
   badges title: "Значки"
@@ -95,8 +94,13 @@ bg:
   search: "Търси"
   book: "Книга"
   filter book: "Филтър книги..."
+  save: "Запиши"
+  cancel: "Откажи"
   try the beta: "Опитай БЕТА версията"
   welcome to the beta: "Добре дошли в новата YouVersion.com!"
+  highlight: "Маркирай"
+  comment: "Нов коментар"
+  note: "Нова бележка"
   selected: "Избрани"
   chapter: "Глава"
   bible: "Библия"
@@ -121,6 +125,7 @@ bg:
   recent versions: "Последно изпозлвани"
   or:
     lower: "или"
+    upper: "ИЛИ"
   likes:
     my likes: "Моите харесвания"
     all likes: "Всички харесвания"
@@ -134,6 +139,7 @@ bg:
     no community notes: "Няма бележки към ибзраните стихове. За да създадеш бележка, избери стих в Библията и натисни бутона Избран в горната част на екрана."
     public: "Публична"
     private: "Поверително"
+    is private: "Коментарът е личен"
     draft: "Чернова"
     creation form errors: "Следните грешки не позволяват да се създаде бележката ви:"
     reference field: "Препратка:"
@@ -183,6 +189,8 @@ bg:
   users:
     unverified heading: "Почти сме готови!"
     unverified message: "Опитвате да влезете в профил който не е напълно регистриран. Потвърдете ел.поща като кликнете на изправената ви връзка от YouVersion. Ако не можете да я откриете ще я <a href='%{resend_path}'>изпратим отново</a>."
+    not following you: "не те следва"
+    following you: "те следва"
     reset connection: "Грешка. Свържи връзката отново."
     settings: "Настройки"
     no connection friends: "Никой от твоите %{connection} приятели не е на YouVersion."
@@ -214,6 +222,7 @@ bg:
     my profile: "Моят профил"
     edit profile: "Редактирай профила"
     update profile: "Обнови профила"
+    other user profile: "Профила на %{username}"
     my password: "Смени паролата ми"
     edit password: "Смени паролата"
     picture: "Снимка"
@@ -381,6 +390,7 @@ bg:
       publishing partners: "Изпращай ми новини за партньорите на YouVersion"
       update: "Актуализация на известията"
   bookmarks:
+    new: "Ново отбелязване"
     edit: "Редактирай"
     delete: "Изтрий тези отбелязвания"
     title field: "Заглавие"
@@ -447,8 +457,10 @@ bg:
     reading completed _ mark and show next: "Следващ: %{next_reference}"
     which reading: "%{current} от общо %{total}"
     done reading: "Готово"
+    no verses: "Няма стих за днес"
     no content: "Твоят план няма плануван текст за днес и е отбелязан като завършен."
     read today: "Виж днешнич план за четене"
+    devotional: "Devotional"
     completion status _ below percentage: "Завърши"
     current progress html: "Ден <b>%{day}</b> от общо <b>%{total_days}</b>"
     start date _ before date string: "Начална дата:"
@@ -499,16 +511,24 @@ bg:
     catch up successful: "Пропуснатото четиво е наваксано."
     restart successful: "Вашият план започва отначало."
     subscribe successful: "Записани сте за този план."
+    day number: "Ден %{day}"
     which day in plan: "Ден %{day} от %{total}"
     must start to complete: "Започни този план и запази завършеното четене"
     invalid reference: "Няма такава препратка в посочената версия. Опитай друга версия или се свържи с нашия <a href='%{support_url}'>екип</a>."
+    sidebar notice: "Разглеждате план за четене"
   registration:
+    placeholder:
+      email: "Въведи ел.поща"
+      username: "Въведи име"
+      password: "Въведи парола"
+    with email: "Влез с ел. поща"
     with facebook: "Влез с Facebook"
     benefits title: "Цялостна опитност"
     benefits blurb: "Създаването на профил с YouVersion дава възможност да използваш повече функции като маркиране и бележки, както и да е споделяш Библията с приятели. Отнема само минута, така че създай профил и го изпозлвай пълноценно."
     plan blurb: "Изглежда, че искаш да започнеш план за четене. Планът спомага да включиш Библията в ежедневието си. Влез в профила си или създай нов профил за да можеш да използваш тази функция."
     bookmark blurb: "Отношения с трети страни"
     friends blurb: "Изглежда, че искаш да пишеш на приятели. Чрез тази функция можеш да споделяш това което научаваш и да помагаш на другите в прочита на Библията. Влез в профила си или създай нов профил за да можеш да използваш тази функция."
+    share blurb: "Влез в профила си или създай нов за да можеш да споделяш стихове във Facebook или Twitter."
     highlight blurb: "Изглежда, че искаш да маркираш пасаж. Маркировките спомагат да организираш и проследяваш любимите си стихове. Влез в профила си или създай нов профил за да можеш да използваш тази функция."
     note blurb: "Искаш да отбележиш нещо по писанието? Супер! Бележките ще ти помогнат да запомниш и организираш истините от Божието слово! Влез или направи свой профил."
   audio:
@@ -516,6 +536,7 @@ bg:
     chapter only: "Все още няма аудио към тези стихове."
     close player menu: "Затвори"
   highlights:
+    choose color: "Избери цвят"
     creation error: "Не може да се подчертае."
     delete error: "Подчертаването не може да се премахне."
   searching:
@@ -593,6 +614,7 @@ bg:
       logos: "Лого пакет на YouVersion"
       icons: "Икони на Библията"
       infographic: "Инфорграфия: Статистика и използване на Библейски приложения"
+      devices: "Колекция изображения: устройства"
       lifestyle: "Галерия: Lifestyle"
       screencast: "YouVersion скрийнкаст"
     links title: "Връзки на медийното покритие"
@@ -625,6 +647,28 @@ bg:
       title: "Грешка!"
       explanation: "Възникна грешка. Опитай с презареждане на страницата. "
       our action: "Получихме съобщението и вече работим по него"
+    home:
+      hero:
+        heading: "Безплатна БИБЛИЯ на твоя телефон, таблет или компютър"
+        description: "YouVersion е библейска програма без реклами, която ти носи Божието слово всеки ден"
+        learn more: "научи повече"
+        start reading: "Започни четене"
+        skip in future: "Пропускай тази страница"
+        now skipped: "Страницата няма да бъде пропускана"
+      features:
+        read heading: "Чети БИБЛИЯТА"
+        read description: "Избери от <strong>стротици версии на БИБЛИЯТА</strong>. Сравни различни версии. Избери шрифт и размер."
+        study heading: "Изучавай БИБЛИЯТА"
+        study description: "<strong>Маркирай</strong> в любимия си цвят. <strong>Маркирай</strong> любимия си стих от БИБЛИЯТА, води бележки. Не само че прекарваш време с Божието слово, но градиш история с БИБЛИЯТА."
+        subscribe heading: "запиши се за план за четене на БИБЛИЯТА"
+        subscribe description: "Прочети цялата Библия, разгледай тема или прочети поучение. ИЗбери своя план и всеки ден ще откриеш избор от Библията за четене"
+        download heading: "Вземи БИБЛИЯТА с теб"
+        download description: "<a href='http://youversion.com/download'>Изтегли</a> БИБЛИЯТА безплатно за толкова много устройства."
+      get started: "Започни с безплатен профил"
+      word with you: "Божието слово с теб"
+      download action: "Изтегли БИБЛИЯТА"
+      download description: "Изтегли приложението на YouVersion на своето мобилно устройство"
+      world installs: "инсталации по света"
   shared:
     menu_settings:
       title: "Настройки за четене"
@@ -639,6 +683,7 @@ bg:
       medium: "Среден"
       large: "Голям"
       highlights: "Маркирани"
+      contrast: "Контраст"
       'on': "Включи"
       'off': "Изключи"
       extras: "Още:"
@@ -652,6 +697,7 @@ bg:
     try again: "Опитай отново"
   versions:
     filter: "Филтър версии..."
+    see all: "Виж всички версии"
     courtesy of: "%{abbreviation} от %{publisher}"
     learn more: "Научи повече"
     index title: "Възможни версии"
@@ -663,3 +709,5 @@ bg:
     number of languages field: "Общо езици:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Публичен домейн"
+    loading: "Зареждане на още версии"
+    load error: "Проблем с зареждането на повече версии. Затвори това меню и опитай отново!"
