--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -46,7 +46,6 @@ ca:
   see users badges: "Veure totes les insígnies de %{username}"
   followers: "Seguidors"
   following: "Seguint"
-  highlight: "Subratllat"
   bookmark: "Marcador"
   earned badge date: "Obtinguda per %{username} fa %{ago}"
   badges title: "Insígnies"
@@ -95,8 +94,13 @@ ca:
   search: "Cerca"
   book: "Llibre"
   filter book: "Filtrar per llibres..."
+  save: "Desa"
+  cancel: "Cancel·la"
   try the beta: "Prova la Beta"
   welcome to the beta: "Benvingut/uda al nou YouVersion.com!"
+  highlight: "Subratllat"
+  comment: "Nou comentari"
+  note: "Nova nota"
   selected: "Seleccionat/ada"
   chapter: "Capítol"
   bible: "La Bíblia"
@@ -121,6 +125,7 @@ ca:
   recent versions: "Utilitzat recentment"
   or:
     lower: "o"
+    upper: "O"
   likes:
     my likes: "El que m'agrada a mi"
     all likes: "Tots els \"m'agrada\""
@@ -134,6 +139,7 @@ ca:
     no community notes: "No hi ha notes de la comunitat que facin referència als versets seleccionats. Per crear una nota, selecciona un verset al lector de la Bíblia i després fes clic al botó \"Seleccionat\" situat a la part superior del lector."
     public: "Públic"
     private: "Privat"
+    is private: "La nota que has demanat és privada"
     draft: "Esborrany"
     creation form errors: "L'error o erros següents no permeten que creïs la nota:"
     reference field: "Referència/es:"
@@ -183,6 +189,8 @@ ca:
   users:
     unverified heading: "Gaire bé acabat!"
     unverified message: "Sembla que estàs intentant entrar a un compte que no està completament donat d'alta. Només et queda fer un pas: simplement fes clic a l'enllaç de verificació que trobaràs al correu electrònic de confirmació que has rebut de YouVersion. No el trobes? Mira la teva carpeta de correu brossa o <a href='%{resend_path}'>reenvia el correu electrònic de confirmació</a>"
+    not following you: "No t'està seguint"
+    following you: "T'està seguint"
     reset connection: "Ens sap greu, però hi ha hagut un error. Si us plau, retira i torna a connectar aquesta connexió."
     settings: "Configuració"
     no connection friends: "Encara no apareix cap dels teus amics de %{connection} a YouVersion."
@@ -214,6 +222,7 @@ ca:
     my profile: "El meu perfil"
     edit profile: "Edita el perfil"
     update profile: "Actualitza el perfil"
+    other user profile: "El perfil de %{username}"
     my password: "Canvia la meva contrasenya"
     edit password: "Canvia la contrasenya"
     picture: "Fotografia"
@@ -381,6 +390,7 @@ ca:
       publishing partners: "Vull ser informat de notícies dels socis de contingut de YouVersion."
       update: "Actualitza els avisos"
   bookmarks:
+    new: "Nou Marcador"
     edit: "Edita"
     delete: "Elimina aquest marcador"
     title field: "Títol"
@@ -438,6 +448,7 @@ ca:
     you have no plans: "Encara no estàs subscrit/a a cap pla de lectura."
     no public plans: "No hi ha plans de lectura visibles per %{username}"
     filter by lang: "Filtra els plans per idioma"
+    plan settings: "Configuració del pla"
     settings: "Configuració"
     search: "Cerca"
     search placeholder: "Cerca plans de %{category}"
@@ -447,8 +458,10 @@ ca:
     reading completed _ mark and show next: "Següent: %{next_reference}"
     which reading: "%{current} de %{total}"
     done reading: "Fet"
+    no verses: "No hi ha versets per avui"
     no content: "El seu pla no té lectures bíbliques programades per aquest dia, de manera que s'ha marcat com completat."
     read today: "Visualització de la lectura d'avui"
+    devotional: "Devocionals"
     completion status _ below percentage: "Complet"
     current progress html: "Dia <b>%{day}</b> de <b>%{total_days}</b>"
     start date _ before date string: "Data d'inici:"
@@ -499,16 +512,24 @@ ca:
     catch up successful: "T'has posat al dia en la teva lectura amb èxit!"
     restart successful: "Has reiniciat el teu pla."
     subscribe successful: "T'has subscrit a aquest pla amb èxit!"
+    day number: "Dia %{day}"
     which day in plan: "Dia %{day} de %{total}"
     must start to complete: "Comença aquest pla per desar les lectures finalitzades!"
     invalid reference: "Malauradament, una de les referències de les escriptures per aquesta lectura no existeix en la versió seleccionada. Intenta seleccionar una versió diferent, més amunt. Si segueix apareixent aquest missatge, si us plau, permet que el nostre equip de suport <a href='%{support_url}'>support team<a/a> en sàpiga sobre el problema"
+    sidebar notice: "Estàs veient un pla de lectura"
   registration:
+    placeholder:
+      email: "Escriu la teva adreça de correu electrònic"
+      username: "Escriu el teu nom d'usuari"
+      password: "Escriu el teu password"
+    with email: "Entra utilitzant la teva adreça electrònica"
     with facebook: "Registra't amb Facebook"
     benefits title: "Obtén l'experiència completa"
     benefits blurb: "Crear un compte a YouVersion et permet accedir a més característiques com ara marcadors i notes. Les notes i els marcadors es mostraran en qualsevol dispositiu on iniciïs la sessió. Un compte també et permet compartir fàcilment la Bíblia amb els teus amics, així que dedica-hi un moment i registra't!"
     plan blurb: "Sembla que vols començar un pla de lectura. Molt bé! Els plans de lectura poden ajudar-te a fer de la Bíblia part del teu dia a dia. Inicia la sessió o registra't a sota i comença el pla de lectura."
     bookmark blurb: "Sembla que vols utilitzar els marcadors. Molt bé! Els marcadors t'ajuden a tenir un registre dels versets que vols memoritzar, compartir, o marcar com a preferits. Inicia la sessió o registra't a sota i comença a utilitzar els marcadors!"
     friends blurb: "Sembla que vols interactuar amb amics teus. Bona idea! Si inicies la sessió o et registres, podràs compartir el que estàs aprenent i ajudar els altres per tal que continuïn els seus plans de lectura."
+    share blurb: "Sembla que vols compartir l'escriptura. Perfecte! Podràs compartir l'escriptura via Facebook o Twitter. Entra o crea un compte i comença!"
     highlight blurb: "Sembla que vols subratllar un passatge. Molt bé! Els subratllats t'ajuden a organitzar i progressar en els teus versets preferits. Inicia la sessió o crea un compte a sota per començar!"
     note blurb: "Sembla que vols prendre una nota sobre un passatge. Bona idea! Les notes poden ajudar-te a recordar i organitzar la veritat que descobreixis a la Paraula de Déu. Inicia la sessió o crea un compte a sota per començar!"
   audio:
@@ -516,6 +537,7 @@ ca:
     chapter only: "Ens sap greu, però l'àudio no està disponible només per als versets. Pots veure i escoltar el capítol sencer al lector."
     close player menu: "Tanca"
   highlights:
+    choose color: "Tria el color"
     creation error: "Ho sentim, però no s'ha pogut subratllar."
     delete error: "Ho sentim, però no s'ha pogut eliminar el subratllat."
   searching:
@@ -593,6 +615,7 @@ ca:
       logos: "Paquet de logotips de YouVersion"
       icons: "Icones de l'aplicació de la Bíblia"
       infographic: "Infografia: estadístiques i Ús de l'aplicació de la Bíblia"
+      devices: "Col·lecció d'imatges: Dispositius"
       lifestyle: "Col·lecció d'imatges: estil de vida"
       screencast: "Captura de pantalla de YouVersion"
     links title: "Enllaços per als mitjans de cobertura"
@@ -625,6 +648,28 @@ ca:
       title: "Alguna cosa ha sortit malament!"
       explanation: "Quelcom ha fallat! Pots intentar-ho de nou tornant a carregar la pàgina, ho sentim molt per les molèsties!"
       our action: "Ens han avisat sobre això i ho arreglarem tan aviat com sigui possible"
+    home:
+      hero:
+        heading: "Una Bíblia gratuïta al teu telèfon, tauleta i ordinador."
+        description: "YouVersion és una Bíblia simple i sense publicitat que et posa la Paraula de Déu a la teva vida diària."
+        learn more: "Més informació a sota"
+        start reading: "Comença a llegir"
+        skip in future: "No mostris aquesta pàgina en el futur"
+        now skipped: "Aquesta pàgina ja no es mostrarà."
+      features:
+        read heading: "Llegeix la Bíblia"
+        read description: "Escull entre <strong>centenars de versions de la Bíblia i idiomes</strong>. Compara dues versions, una al costat de l'altra. També pots escollir el tipus i la mida de lletra. Fes que la teva experiència de la Bíblia en línia sigui com a tu t'agrada."
+        study heading: "Estudia la Bíblia."
+        study description: "<strong>Ressalta</strong> en el teu color preferit, <strong>marca</strong> els teus versets preferits, i pren notes sobre el que estàs aprenent. No només estàs passant temps amb la Paraula de Déu; estàs construint una història de la teva interacció amb la Bíblia."
+        subscribe heading: "Subscriu-te a Plans de la Bíblia."
+        subscribe description: "Cobreix tota la Bíblia, concentra't en un tema, o llegeix un devocional d'un mestre. Escull el teu pla i cada dia trobaràs una selecció de la Bíblia esperant-te."
+        download heading: "Porta la Bíblia amb tu."
+        download description: "<a href='http://youversion.com/download'>Descarrega</a> l'aplicació de la Bíblia gratuïtament a qualsevol dispositiu mòbil. Quan utilitzis l'aplicació, les teves notes i marcadors i molt més es sincronitzaran automàticament en tots els teus dispositius."
+      get started: "Comença amb el teu compte gratuït."
+      word with you: "La Paraula de Déu és amb tu."
+      download action: "Descarrega l'aplicació de la Bíblia"
+      download description: "Descarrega YouVersion, l'aplicació gratuïta de la Bíblia, en el teu dispositiu mòbil i tindràs la teva Bíblia amb tu allà on vagis."
+      world installs: "Instal·lacions a tot el món"
   shared:
     menu_settings:
       title: "Configuració del lector"
@@ -639,6 +684,7 @@ ca:
       medium: "Mitjana"
       large: "Gran"
       highlights: "Subratllats"
+      contrast: "Contrast"
       'on': "Activat"
       'off': "Desactivat"
       extras: "Extres:"
@@ -652,6 +698,7 @@ ca:
     try again: "Intenta-ho una altra vegada"
   versions:
     filter: "Filtrar per versions..."
+    see all: "Consulta totes les versions"
     courtesy of: "%{abbreviation} proporcionada per %{publisher}"
     learn more: "Llegeix-ne més"
     index title: "Versions disponibles"
@@ -663,3 +710,5 @@ ca:
     number of languages field: "Idiomes totals:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Domini públic"
+    loading: "Carregant més versions..."
+    load error: "Ho sentim, hi ha hagut un problema carregant més versions. Tanca aquest menú i intenta tornar-lo a obrir."
