--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -46,7 +46,6 @@ cs:
   see users badges: "Zobrazit všechny odznaky uživatele %{username}"
   followers: "Sledující"
   following: "Následuji"
-  highlight: "Zvýraznit\n"
   bookmark: "Záložka"
   earned badge date: "Získáno uživatelem %{username} před %{ago}"
   badges title: "Odznaky"
@@ -95,8 +94,13 @@ cs:
   search: "Hledat"
   book: "Kniha"
   filter book: "Filtrovat knihy..."
+  save: "Uložiť"
+  cancel: "Zrušiť"
   try the beta: "Vyzkoušejte Beta verzi"
   welcome to the beta: "Vítejte na novém YouVersion.com!"
+  highlight: "Zvýraznit\n"
+  comment: "Nový komentář"
+  note: "Nová poznámka"
   selected: "Zvolené"
   chapter: "Kapitola"
   bible: "Bible"
@@ -185,6 +189,8 @@ cs:
   users:
     unverified heading: "Jste téměř u konce!"
     unverified message: "Vypadá to, že se snažíte přihlásit do účtu, u kterého ještě nebylo provedeno úplné nastavení. Máte před sebou už jen jeden krok: Jednoduše klikněte na ověřovací odkaz, který Vám byl zaslán v potvrzovacím e-mailu z YouVersion. Nemůžete jej najít? Podívejte se do Vaší nevyžádané pošty (spamu) a nebo si nechte znovu poslat <a href='%{resend_path}'>potvrzovací e-mail</a>."
+    not following you: "Nenásleduje vás"
+    following you: "Následuje vás"
     reset connection: "Promiňte, vyskytla se chyba. Prosím deaktivujte toto připojení a znovu ho připojte."
     settings: "Nastavení"
     no connection friends: "Žádný z vašich %{connection} přátel ještě není zaregistrovaný na YouVersion."
@@ -192,7 +198,7 @@ cs:
     profile form errors: "Následující chyba zabránila aktualizaci vašeho profilu:"
     email address: "E-mailová adresa"
     user name: "Uživatelské jméno"
-    agreement: "Souhlasím s YouVersion %{terms_link}."
+    agreement: "Souhlasím s %{terms_link}."
     terms and conditions: "všeobecné podmínky"
     facebook sign up success: "Skvěle! Autorizovali jste se skrze Facebook. Nyní si zvolte YouVersion uživatelské jméno a heslo pro pokračování."
     register: "Zaregistrovat"
@@ -216,6 +222,7 @@ cs:
     my profile: "Můj profil"
     edit profile: "Nastavit profil"
     update profile: "Aktualizovat profil"
+    other user profile: "Profil %{username}"
     my password: "Změnit moje heslo"
     edit password: "Změnit heslo"
     picture: "Obrázek"
@@ -383,6 +390,7 @@ cs:
       publishing partners: "Informujte mě o novinkách od partnerů obsahu YouVersion."
       update: "Upozornění na aktualizace"
   bookmarks:
+    new: "Nová záložka"
     edit: "Upravit"
     delete: "Smazat tuto záložku"
     title field: "Název"
@@ -440,6 +448,7 @@ cs:
     you have no plans: "Právě nejste přihlášen/a k žádnému plánu čtení."
     no public plans: "Žádné viditelné plány uživatele %{username}."
     filter by lang: "Filtrovat plány čtení podle jazyků"
+    plan settings: "Nastavení plánu"
     settings: "Nastavení"
     search: "Hledat"
     search placeholder: "Vyhledat plány kategorie %{category}"
@@ -449,8 +458,10 @@ cs:
     reading completed _ mark and show next: "Další: %{next_reference}"
     which reading: "%{current} z %{total}"
     done reading: "Hotovo"
+    no verses: "Žádné verše pro dnešní den"
     no content: "Váš plán nemá na dnešek žádný obsah a proto byl označený jako dokončený."
     read today: "Zobrazit dnešní čtení"
+    devotional: "Ztišení"
     completion status _ below percentage: "Dokončeno"
     current progress html: "Den <b>%{day}</b> z <b>%{total_days}</b>"
     start date _ before date string: "Datum začátku:"
@@ -501,16 +512,18 @@ cs:
     catch up successful: "Úspěch! Nyní jste dohnali své čtení."
     restart successful: "Váš plán byl restartován od začátku."
     subscribe successful: "Skvěle! Přihlásili jste se k tomuto plánu."
+    day number: "Den %{day}"
     which day in plan: "Den %{day} z %{total}"
     must start to complete: "Aby jste mohl/a uložit přečtený úsek, je zapotřebí spustit tento plán čtení!"
     invalid reference: "Promiňte, ale v tomto vybraném překladu se zřejmě nenachází odkaz na tento verš. Vyzkoušejte vybrat jiný překlad, viz nahoře. Pokud se vám tato zpráva opět zobrazí , prosím informujte náš <a href='%{support_url}'>tým podpory</a> o tomto problému."
+    sidebar notice: "Prohlížítw si plán čtení"
   registration:
     placeholder:
       email: "Zadejte vaši e-mailovou adresu"
       username: "Zadejte vaše uživatelské jméno"
       password: "Zadejte své heslo"
-    with email: "Zaregistrujte se pomocí vaší e-mailové adresy"
-    with facebook: "Přihlásit se přes Facebook"
+    with email: "Vytvořte účet pomocí vaší e-mailové adresy"
+    with facebook: "Přihlašte se přes Facebook"
     benefits title: "Získejte plný zážitek"
     benefits blurb: "Vytvoření YouVersion účtu vám dává přístup k více funkcím, jako jsou záložky nebo poznámky. Budete je mít k dispozici na jakémkoli zařízení, kde se přihlásíte. Účet vám také ulehčí sdílení Bible s přáteli, tak obětujte jednu nebo dvě minuty a zaregistrujte se!"
     plan blurb: "Vypadá to, že chcete začít plán čtení. Chytré! Plány vám můžou pomoci udělat z Bible součást vašeho každodenního života. Přihlašte se nebo si vytvořte účet níže a můžete začít!"
@@ -524,6 +537,7 @@ cs:
     chapter only: "Omlouváme se, ale audio funkce není dostupná pro jednotlivé verše. Začněte číst kapitolu od začátku a tato funkce vám bude nabídnuta. "
     close player menu: "Zavřít"
   highlights:
+    choose color: "Vyberte barvu"
     creation error: "Omlouváme se, nepodařilo se zvýraznění."
     delete error: "Omlouváme se, nepodařilo se odstranit zvýraznění."
   searching:
@@ -639,7 +653,7 @@ cs:
         heading: "Bible zdarma na váš telefon, tablet a počítač."
         description: "YouVersion je jednoduchá aplikace bez reklam, která vám přináší Boží Slovo do vašeho každodenního života."
         learn more: "zjistěte víc níže"
-        start reading: "Začít číst"
+        start reading: "Začněte číst"
         skip in future: "Přeskakovat v budoucnu tuto stránku"
         now skipped: "Tato stránka bude přeskočena."
       features:
@@ -670,6 +684,7 @@ cs:
       medium: "Střední"
       large: "Velké"
       highlights: "Zvýraznění"
+      contrast: "Kontrast"
       'on': "On"
       'off': "Off"
       extras: "Extra:"
@@ -683,6 +698,7 @@ cs:
     try again: "Zkuste to znovu"
   versions:
     filter: "Filtrovat překlady..."
+    see all: "Podívat se na všechny verše"
     courtesy of: "%{abbreviation} Vám přináší %{publisher}"
     learn more: "Zjistit více"
     index title: "Dostupné překlady"
