--- a/config/locales/es_ES.yml
+++ b/config/locales/es_ES.yml
@@ -46,7 +46,6 @@ es-ES:
   see users badges: "Ver todos las insignias de %{username}"
   followers: "Seguidores"
   following: "Siguiendo"
-  highlight: "Resaltar"
   bookmark: "Marcador"
   earned badge date: "Ganada por %{username} hace %{ago}"
   badges title: "Insignias"
@@ -95,8 +94,13 @@ es-ES:
   search: "Buscar"
   book: "Libro"
   filter book: "Filtrar libros..."
+  save: "Guardar"
+  cancel: "Cancelar"
   try the beta: "Intenta la versión Beta"
   welcome to the beta: "¡Bienvenido a la nueva página YouVersion.com!"
+  highlight: "Resaltar"
+  comment: "Nuevo Comentario"
+  note: "Nueva nota"
   selected: "Seleccionado"
   chapter: "Capítulo"
   bible: "Biblia"
@@ -185,6 +189,8 @@ es-ES:
   users:
     unverified heading: "¡Casi conseguido!"
     unverified message: "Parece que estás intentando iniciar sesión con una cuenta que todavía no ha sido configurada completamente. Sólo te hace falta un paso: haz click en el enlace de confirmación que te ha llegado de YouVersion a tu correo. ¿No puedes encontrarlo? Revisa la carpeta de correo no deseado o <a href='%{resend_path}'> reenvía el correo de confirmación</a>"
+    not following you: "No te está siguiendo"
+    following you: "Te está siguiendo"
     reset connection: "Lo sentimos, ha ocurrido un error. Por favor, retire y vuelva a conectar esta conexión."
     settings: "Configuración"
     no connection friends: "Ninguno de tus amigos de %{connection} parece estar conectado a YouVersion."
@@ -216,6 +222,7 @@ es-ES:
     my profile: "Mi perfil"
     edit profile: "Editar perfil"
     update profile: "Actualizar perfil"
+    other user profile: "Perfil de %{username}"
     my password: "Cambiar mi contraseña"
     edit password: "Cambiar contraseña"
     picture: "Fotografía"
@@ -383,6 +390,7 @@ es-ES:
       publishing partners: "Mantenerme al día con las noticias de los socios de YouVersion."
       update: "Actualizar notificaciones"
   bookmarks:
+    new: "Nuevo Marcador"
     edit: "Editar"
     delete: "Eliminar este marcador"
     title field: "Título"
@@ -440,6 +448,7 @@ es-ES:
     you have no plans: "No estás suscrito a ningún plan de lectura en este momento."
     no public plans: "No existen planes de lectura visibles para %{username}."
     filter by lang: "Filtrar planes por idioma"
+    plan settings: "Configuración del plan"
     settings: "Configuración"
     search: "Buscar"
     search placeholder: "Buscar planes de %{category} "
@@ -449,8 +458,10 @@ es-ES:
     reading completed _ mark and show next: "Siguiente: %{next_reference}"
     which reading: "%{current} de%{total}"
     done reading: "Hecho"
+    no verses: "No hay versículos para hoy"
     no content: "Tu plan no tiene horario de lecturas para este día, así que ha sido marcado como completo."
     read today: "Ver la lectura del día de hoy"
+    devotional: "Devocional"
     completion status _ below percentage: "Finalizado"
     current progress html: "Día <b>%{day}</b> de <b>%{total_days}</b>"
     start date _ before date string: "Fecha de inicio:"
@@ -501,9 +512,11 @@ es-ES:
     catch up successful: "¡Conseguido! Ahora estas al día en tu lectura."
     restart successful: "Tu plan ha sido reestablecido desde el inicio."
     subscribe successful: "¡Enhorabuena! Te has suscrito a este plan."
+    day number: "Día %{day}"
     which day in plan: "Día %{day} de %{total}"
     must start to complete: "¡Comienza este plan para guardar las lecturas terminadas!"
     invalid reference: "Lo sentimos, una de las referencias de esta lectura no existe en la versión seleccionada. Inténtalo seleccionando una version diferente. Si continuas viendo este mensaje, por favor, haznos saber <a href='%{support_url}'>support team</a> sobre este problema."
+    sidebar notice: "Usted está viendo un plan de lectura."
   registration:
     placeholder:
       email: "Ingresa tu correo electrónico"
@@ -516,6 +529,7 @@ es-ES:
     plan blurb: "Parece que quieres iniciar un plan de lectura. ¡Excelente decisión! Los planes pueden ayudarte a hacer de la Biblia parte de tu vida diaria. ¡Inicia sesión o crea una cuenta para comenzar!"
     bookmark blurb: "Parece que quieres usar un marcador. ¡Buena decisión! Los marcadores te ayudan a mantener un registro de los versículos que quieres memorizar, compartir o marcar como favoritos. ¡Inicia sesión o crea una cuenta para comenzar!"
     friends blurb: "Parece que quieres interactuar con tus Amigos. ¡Buena idea! Podréis compartir lo que cada uno está aprendiendo y ayudaros a mantener los objetivos de lectura. ¡Inicia sesión o crea una cuenta para comenzar!"
+    share blurb: "Parece que quieres compartir la Escritura. ¡Enhorabuena! Podrás compartirla vía Facebook o Twitter. Inicia sesión o crea una cuenta y comienza a compartir!"
     highlight blurb: "Parece que quieres subrayar. ¡Genial! Subrayar te ayuda a organizarte y tener presente tus versículos favoritos. ¡Inicia sesión o crea un cuenta y comienza!"
     note blurb: "Parece que quieres tomar nota. ¡Bien pensado! Las notas pueden ayudarte a recordar y organizar lo que descubres en la Palabra de Dios. ¡Inicia sesión o crea una cuenta y comienza!"
   audio:
@@ -523,6 +537,7 @@ es-ES:
     chapter only: "Lo sentimos, el audio no está disponible para estos versículos. Mira en el lector los capítulos que tienen audio."
     close player menu: "Cerrar"
   highlights:
+    choose color: "Elige color"
     creation error: "Lo sentimos, no se ha podido resaltar."
     delete error: "Lo sentimos, no ha sido posible eliminar lo destacado."
   searching:
@@ -574,7 +589,6 @@ es-ES:
     partners title: "Socios publicitarios de la Biblia"
     partners text: "Sin nuestros generosos editores asociados de la Biblia, YouVersion simplemente no podía ser capaz de proveer a nuestra comunidad mundial tal cantidad de Biblias. Muchos de vosotros habéis preguntado cómo podéis agradecer a estos partidarios vitales para la misión de YouVersion. Podéis aprender más acerca de ellos, sus ministerios, y formas en las que podéis ayudarles, a través de los siguientes enlaces."
     translation title: "Nuestros equipos de traducción"
-    learn more: "Learn More"
     bible dot com title: "¿Que ha pasado con la antigua Bible.com?"
     bible dot com copy: "Si estás buscando el contenido de Christ Unlimited Ministries por Bud y Betty Miller o la antigua página Bible.com, por favor, visita su nueva página en <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
@@ -669,6 +683,7 @@ es-ES:
       medium: "Mediano"
       large: "Grande"
       highlights: "Destacados"
+      contrast: "Contraste"
       'on': "Activado"
       'off': "Desactivado"
       extras: "Extras:"
@@ -682,8 +697,8 @@ es-ES:
     try again: "Intentar de nuevo"
   versions:
     filter: "Filtrar versiones..."
+    see all: "Ver todas las versiones..."
     courtesy of: "%{abbreviation} presentada por %{publisher}"
-    learn more: "Learn More"
     index title: "Versiones disponibles"
     publisher widget title: "Editor"
     visit publisher: "Visita la página de la editorial"
