--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -18,7 +18,7 @@ id:
   twitter: "Twitter"
   facebook: "Facebook"
   share success: "Pesan anda telah dibagikan."
-  share error: "Maaf, telah terjadi kesalahan ketika membagikan pesan anda. Harap coba kembali."
+  share error: "Maaf, terjadi kesalahan saat membagikan pesan anda. Cobalah kembali."
   error following user: "Maaf, kesalahan terjadi saat mengikuti pengguna tersebut."
   error unfollowing user: "Maaf, kesalahan terjadi saat berhenti mengikuti pengguna tersebut."
   google plus: "Google +"
@@ -46,7 +46,6 @@ id:
   see users badges: "Lihat seluruh lencana dari %{username}"
   followers: "Pengikut"
   following: "Mengikuti"
-  highlight: "Sorot"
   bookmark: "Penanda"
   earned badge date: "Diperoleh oleh %{username} %{ago} yang lalu"
   badges title: "Lencana"
@@ -95,8 +94,13 @@ id:
   search: "Cari"
   book: "Kitab"
   filter book: "Saring Kitab"
+  save: "Simpan"
+  cancel: "Batalkan"
   try the beta: "Coba versi Beta"
   welcome to the beta: "Selamat datang di versi YouVersion.com yang baru!"
+  highlight: "Soroti Ayat"
+  comment: "Komentar Baru"
+  note: "Catatan baru"
   selected: "Dipilih"
   chapter: "Pasal"
   bible: "Alkitab"
@@ -166,8 +170,8 @@ id:
     choose book and chapter: "Pilih Kitab + Pasal"
     choose version: "Pilih Versi"
     choose second version: "Pilih Versi Kedua"
-    share: "Bagikan"
-    share now: "Bagikan sekarang"
+    share: "Bagi"
+    share now: "Bagi sekarang"
     selected: "Dipilih"
     preferences: "Preferensi"
     listen: "Dengarkan"
@@ -185,6 +189,8 @@ id:
   users:
     unverified heading: "Hampir Selesai!"
     unverified message: "Tampaknya anda mencoba untuk masuk dengan menggunakan akun yang belum sepenuhnya siap. Anda hanya perlu satu langkah lagi: cukup dengan mengklik tautan verifikasi yang terdapat dalam e-mail konfirmasi yang anda terima dari YouVersion. Tidak dapat menemukannya? Cek kotak spam anda atau <a href='%{resend_path}'>kirim ulang e-mail konfirmasi</a>."
+    not following you: "Tidak mengikuti anda"
+    following you: "Mengikuti anda"
     reset connection: "Maaf, terjadi sebuah kesalahan. Silakan tutup dan kemudian hubungkan kembali sambungan ini."
     settings: "Pengaturan"
     no connection friends: "Tidak ada teman %{connection} anda yang menggunakan YouVersion."
@@ -216,6 +222,7 @@ id:
     my profile: "Profil saya"
     edit profile: "Ubah profil"
     update profile: "Perbaharui profil"
+    other user profile: "Profil pengguna"
     my password: "Ubah kata sandi saya"
     edit password: "Ubah Kata Sandi"
     picture: "Gambar"
@@ -383,6 +390,7 @@ id:
       publishing partners: "Selalu beritahu saya tentang berita-berita dari mitra-mitra konten YouVersion."
       update: "Perbaharui notifikasi"
   bookmarks:
+    new: "Penanda Bacaan Baru"
     edit: "Sunting"
     delete: "Hapus Penanda ini"
     title field: "Judul"
@@ -440,6 +448,7 @@ id:
     you have no plans: "Saat ini anda tidak berlangganan program bacaan apapun."
     no public plans: "Tidak ada rencana bacaan terlihat untuk %{username}."
     filter by lang: "Saring Rencana berdasar Bahasa"
+    plan settings: "Pengaturan Rencana Bacaan"
     settings: "Pengaturan"
     search: "Cari"
     search placeholder: "Cari Rencana %{category}"
@@ -449,8 +458,10 @@ id:
     reading completed _ mark and show next: "Selanjutnya: %{next_reference}"
     which reading: "%{current} dari %{total}"
     done reading: "Selesai"
+    no verses: "Tidak ada ayat-ayat untuk hari ini"
     no content: "Rencana anda tidak memiliki bacaan ayat suci terjadwal untuk hari ini, jadi telah ditandai selesai."
     read today: "Lihat Bacaan Hari Ini"
+    devotional: "Renungan"
     completion status _ below percentage: "Selesai"
     current progress html: "Hari ke <b>%{day}</b> dari <b>%{total_days}</b>"
     start date _ before date string: "Tanggal Mulai:"
@@ -501,21 +512,23 @@ id:
     catch up successful: "Sukses! Anda telah mengejar ketinggalan bacaan anda."
     restart successful: "Rencana  anda mulai lagi dari awal."
     subscribe successful: "Bagus! Anda telah berlangganan Bacaan ini."
+    day number: "Hari"
     which day in plan: "Hari ke %{day} dari %{total}"
     must start to complete: "Mulai rencana ini untuk menyimpan bacaan-bacaan yang telah selesai!"
     invalid reference: "Maaf, ayat rujukan untuk bacaan ini belum tersedia pada versi yang dipilih. Cobalah memilih versi berbeda di atas. Jika anda tetap melihat pesan ini, silakan beritahu <a href='%{support_url}'>tim dukungan</a> kami tentang isu ini."
+    sidebar notice: "Anda sedang melihat rencana bacaan."
   registration:
     placeholder:
       email: "Masukkan alamat email Anda"
       username: "Masukkan username Anda"
       password: "Masukkan password Anda"
-    with email: "Mendaftar menggunakan alamat email Anda"
+    with email: "Daftar menggunakan alamat email anda"
     with facebook: "Daftar lewat Facebook"
     benefits title: "Dapatkan pengalaman penuh"
     benefits blurb: "Membuat akun YouVersion memberikan anda akses ke lebih banyak fitur seperti penanda dan catatan. Fitur akan muncul pada perangkat yang anda gunakan. Akun juga memudahkan anda berbagi ayat-ayat Alkitab dengan teman-teman anda, jadi luangkanlah satu atau dua menit dan mendaftarlah!"
     plan blurb: "Sepertinya anda ingin memulai Program Bacaan. Bijaksana! Program dapat menolong anda menjadikan Alkitab bagian keseharian hidup anda. Masuk atau buat akun dan mulailah!"
     bookmark blurb: "Sepertinya anda ingin menggunakan Penanda. Bagus! Penanda membantu anda menyimpan ayat yang ingin anda ingat, bagikan, atau jadikan sebagai favorit. Masuk atau buat akun dan mulailah!"
-    friends blurb: "Sepertinya anda ingin berinteraksi dengan teman anda. Ide bagus! Anda akan dapat berbagi apa yang telah anda peroleh dan menolong orang lain agar tetap fokus terhadap Bacaan mereka. Masuk atau buatlah akun dan mulailah!"
+    friends blurb: "Sepertinya anda ingin berinteraksi dengan teman. Ide bagus! Anda akan dapat berbagi apa yang anda pelajari dan saling menolong satu sama lain agar tetap fokus dengan tujuan bacaan. Masuk atau buat akun dan mulailah!"
     share blurb: "Tampaknya Anda ingin berbagi Firman. Bagus! Anda bisa melakukannya lewat Facebook atau Twitter. Masuk atau buat akun di bawah, dan mulailah berbagi! "
     highlight blurb: "Sepertinya Anda mau menyoroti ayat. Bagus! Sorotan membantu Anda mengatur dan melacak ayat-ayat favorit. Masuk atau buat akun di bawah dan mulailah!"
     note blurb: "Tampaknya anda ingin membuat catatan tentang kitab suci. Pemikiran bagus! Catatan dapat membantu anda mengingat dan menyusun kebenaran yang anda temukan dalam Firman Tuhan. Masuk atau buatlah akun di bawah ini dan mulailah!"
@@ -524,6 +537,7 @@ id:
     chapter only: "Maaf, suara tidak tersedia untuk ayat-ayat. Lihat di pembaca untuk pasal suara."
     close player menu: "Tutup"
   highlights:
+    choose color: "Pilih Warna"
     creation error: "Maaf, tidak dapat memberi sorotan."
     delete error: "Maaf, sorotan tidak bisa disingkirkan."
   searching:
@@ -542,7 +556,7 @@ id:
     promo 3: "Tahun ini, lebih dari 5 milyar orang akan menggunakan ponsel. Beri donasi sekarang."
     headline: "Setiap orang butuh Firman Tuhan."
     subhead: "Bantulah orang di seluruh dunia memiliki Alkitab dalam genggaman mereka."
-    copy: "Bayangkan jika Anda dapat memberikan Alkitab gratis kepada setiap orang di dunia. Saat Anda memberi untuk YouVersion, Anda dapat melakukan hal itu. Kita hidup di zaman yang dahulu hanya bisa diimpikan - zaman dimana setiap orang yang memiliki ponsel bisa mengakses Alkitab, dan turut mengalami kisah kasih Tuhan. Dengan dukungan Anda, kami dapat terus membantu lebih banyak orang untuk menghabiskan waktunya dalam Firman Tuhan."
+    copy: "Bayangkan jika anda dapat memberikan Alkitab gratis ke semua orang. Saat anda memberi kepada YouVersion, anda dapat melakukan hal itu. Kami hidup di saat yang lain hanya bermimpi &ndash; saat setiap orang yang punya ponsel dapat mengakses Alkitab dan mengalami kisah kasih Tuhan bagi kita. Dengan dukungan anda, kami dapat terus membantu lebih banyak orang meluangkan waktu dalam Firman Tuhan"
     amount: "Nilai donasi (USD)"
     name: "Nama Anda"
     card number: "Nomor Kartu Kredit"
@@ -569,7 +583,7 @@ id:
     relevancy: "Relevansi"
     relevancy copy: "Di generasi terdahulu, akses ke Alkitab sangat terbatas. Hari ini, tidak lagi masalah. Namun, banyak orang yang sudah memiliki akses ke Alkitab berpikir bahwa pesannya tidak berlaku di kehidupan mereka. Pada saat bersamaan, ada mereka yang meyakini adanya hubungan antara Alkitab dengan pengalaman keseharian mereka."
     information revolution: "Revolusi Informasi"
-    information revolution copy: "Selama dekade terakhir, Internet telah membawa revolusi yang memampukan manusia seperti yang tak pernah tejadi sebelumnya. Dengan kemampuan untuk berbagi, berkontribusi, mencipta, menyiarkan, dan berkomunikasi, kini mudah untuk mengekspresikan bersama seluruh dunia siapa kita dan apa yang kita percaya."
+    information revolution copy: "Selama satu dekade terakhir ini, Internet telah membawa revolusi yang memampukan manusia seperti yang tak pernah tejadi sebelumnya. Dengan kemampuan untuk berbagi, berkontribusi, mencipta, menyiarkan, dan berkomunikasi, kini mudah untuk mengekspresikan bersama seluruh dunia siapa kita dan apa yang kita percaya."
     youversion copy: "Sejak mulai di tahun 1996, tujuan LifeChurch.tv adalah menuntun orang menjadi pengikut Kristus yang sepenuhnya setia. Untuk itu, kami telah mencari berbagai cara baru untuk membantu orang menghubungkan Alkitab dengan kehidupan keseharian mereka. Metode kami telah berubah dari tahun ke tahun dengan berbagai  tehnologi dan strategi yang kami gunakan. Namun intinya, fokus kami tetap berkaitan karena kami terus berusaha menunjukkan dan mengajarkan orang bagaimana Firman Tuhan berlaku bagi semua orang, di manapun mereka dalam kehidupan."
     youversion copy 2: "YouVersion mewakili pencapaian baru dalam usaha LifeChurch.tv. Kami tak hanya membuat perangkat bertehnologi terbaru untuk mempengaruhi dunia, yang lebih penting, kami melibatkan orang ke dalam hubungan dengan Tuhan saat mereka menemukan keterkaitan yang Alkitab miliki bagi hidup mereka."
     partners title: "Para Mitra Penerbit Alkitab"
@@ -588,7 +602,7 @@ id:
     facebook: "YouVersion di Facebook"
     twitter: "YouVersion di Twitter"
     support: "Butuh pertolongan dengan YouVersion?"
-    lead copy: "Menurut Alkitab online, YouVersion.com, Aplikasi Alkitab adalah Alkitab seluler gratis yang bisa dipasang hampir di semua perangkat seluler. Aplikasi Alkitab memungkinkan pengguna membaca Alkitab, berbagi ayat dengan jejaring sosial mereka, menandai bacaan kesukaan mereka, dan banyak lagi&mdash;semua dalam format yang mengikuti gaya hidup dinamis mereka."
+    lead copy: "Menurut Alkitab online, YouVersion.com, Aplikasi Alkitab adalah Alkitab seluler gratis yang bisa digunakan hampir di semua jenis perangkat seluler. Aplikasi Alkitab memungkinkan pengguna membaca Alkitab, berbagi ayat dengan jejaring sosial mereka, menandai bacaan kesukaan mereka, dan banyak lagi&mdash;semua dalam format yang mengikuti gaya hidup dinamis mereka."
     resources title: "Sumber Pers / Media"
     now title: "Hari ini di Komunitas YouVersion"
     resources:
@@ -636,25 +650,25 @@ id:
       our action: "Kami telah dilapori tentang ini dan akan membereskan secepatnya."
     home:
       hero:
-        heading: "Sebuah Alkitab pada telepon, tablet, dan komputer anda."
-        description: "YouVersion adalah sebuah Alkitab sederhana dan bebas iklan yang membawa Firman Allah kedalam kehidupan sehari-hari anda."
-        learn more: "Lihat kebawah untuk mengetahui lebih lanjut"
-        start reading: "Mulai membaca"
-        skip in future: "langkahi halaman ini dikemudian hari"
-        now skipped: "Halaman ini sekarang akan dilangkahi."
+        heading: "Alkitab gratis di telepon, tablet, dan komputer anda"
+        description: "YouVersion adalah Alkitab sederhana tanpa iklan, yang membawa Firman Tuhan bagi kehidupan keseharian anda."
+        learn more: "pelajari lebih lanjut di bawah"
+        start reading: "Mulai baca"
+        skip in future: "lewatkan halaman ini di masa datang"
+        now skipped: "Halaman ini sekarang akan dilewatkan."
       features:
-        read heading: "Bacalah Alkitab."
-        read description: "Gunakan pilihanmu dari ratusan versi dan terjemahan Alkitab. Membandingkan 2 versi Alkitab secara berurutan. Anda bahkan bisa memilih ukuran huruf dan ukuran layar. Anda dapat menggunakan Alkitab online sesuai yang Anda inginkan"
-        study heading: "Pelajari Alkitab"
-        study description: "sorot dalam warna favorit anda, tandai ayat-ayat Alkitab favorit Anda, dan buat catatan-catatan tentang apa yang anda pelajari. Tidak hanya  menghabiskan waktu dengan Firman Allah, anda sedang membangun riwayat interaksi Anda dengan Alkitab."
-        subscribe heading: "Berlangganan perencanaan membaca Alkitab"
-        subscribe description: "Mencakup seluruh Alkitab, fokus pada topik, atau membaca renungan dari seorang guru yang berbakat. Pilih rencana anda dan anda akan mendapatkan seleksi Alkitab harian menunggu anda tiap hari."
-        download heading: "Bawalah Alkitab bersama dengan Anda"
-        download description: "http://youversion.com/download Unduh Aplikasi Alkitab gratis untuk semua  jenis perangkat seluler. Saat anda menggunakan seluler, catatan anda, bookmark, ikhtisar, rencana, dan lainnya akan secara otomatis disinkronisasikan di semua perangkat anda. "
+        read heading: "Baca Alkitab."
+        read description: "Pilih dari <strong>ratusan versi dan terjemahan Alkitab</strong>. Bandingkan dua versi berdampingan. Anda bahkan bisa pilih huruf dan ukuran tampilan. Jadikan pengalaman Alkitab daring anda sesuka anda."
+        study heading: "Pelajari Alkitab."
+        study description: "<strong>Sorot</strong> pakai warna favorit anda, beri <strong>penanda</strong> ayat-ayat Alkitab favorit anda, dan buat catatan yang anda pelajari. Tak hanya meluangkan waktu bersama Firman Tuhan, anda sedang membangun riwayat interaksi anda dengan Alkitab."
+        subscribe heading: "Berlangganan Program Alkitab."
+        subscribe description: "Telusuri seluruh Alkitab, fokus ke suatu topik, atau baca renungan dari pengajar berbakat. Pilih rencana anda dan tiap hari anda akan temukan ayat Alkitab menanti anda. "
+        download heading: "Bawa Alkitab bersama dengan Anda"
+        download description: "<a href='http://youversion.com/download'>Unduh</a> gratis  Ap Alkitab di segala perangkat selular. Saat anda gunakan aplikasi selular, semua catatan, penanda, sorotan, program, dan lainnya akan otomatis diseragamkan di semua perangkat anda."
       get started: "Mulailah dengan akun gratis Anda"
-      word with you: "Firman Tuhan bersama-sama dengan Anda"
+      word with you: "Firman Tuhan menyertai anda."
       download action: "Unduh Aplikasi Alkitab"
-      download description: "Unduh Aplikasi Alkitab untuk perangkat mobile Anda dan Anda akan membawa Alkitab kemanapun Anda pergi"
+      download description: "Unduh Ap Alkitab gratis dari YouVersion di piranti selular anda dan anda akan punya Alkitab kemanapun anda pergi."
       world installs: "Instal seluruh dunia"
   shared:
     menu_settings:
@@ -670,6 +684,7 @@ id:
       medium: "Sedang"
       large: "Besar"
       highlights: "Sorotan"
+      contrast: "Kontras"
       'on': "Hidup"
       'off': "Mati"
       extras: "Tambahan:"
@@ -683,6 +698,7 @@ id:
     try again: "Coba lagi"
   versions:
     filter: "Saring Versi"
+    see all: "Melihat semua versi..."
     courtesy of: "%{abbreviation} dipersembahkan oleh %{publisher}"
     learn more: "Pelajari Lebih Lanjut"
     index title: "Versi tersedia"
