--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -46,7 +46,6 @@ ko:
   see users badges: "%{username} 님이 받은 배지 보기"
   followers: "팔로워"
   following: "팔로윙"
-  highlight: "하이라이트"
   bookmark: "책갈피"
   earned badge date: "%{username} 님이 %{ago} 전에 받음"
   badges title: "배지"
@@ -95,8 +94,13 @@ ko:
   search: "검색"
   book: "성경"
   filter book: "성경 필터..."
+  save: "저장"
+  cancel: "취소"
   try the beta: "베타 버젼을 사용해보세요."
   welcome to the beta: "YouVersion.com에 오신 것을 환영합니다"
+  highlight: "하이라이트"
+  comment: "새로운 코멘트"
+  note: "새 노트"
   selected: "선택"
   chapter: "장"
   bible: "성경"
@@ -185,6 +189,8 @@ ko:
   users:
     unverified heading: "거의 끝났습니다!"
     unverified message: "설정이 완전히 끝나지 않은 계정에 로그인을 하실려는 것 같군요.   YouVersion이 보낸  확인 이메일 내용 안에 있는 확인 절차  링크를 클릭하시면 됩니다.  메일을 찾을 수가 없으시면 스팸 폴더를 확인하시거나  <a href='%{resend_path}'>확인 이메일 재발송</a>을 클릭하세요."
+    not following you: "님은 회원님을 팔로윙 하지 않습니다."
+    following you: "님은 회원님을 팔로윙 하고 있습니다."
     reset connection: "죄송합니다.  오류가 발생했습니다.  다시 연결을 시도해주세요."
     settings: "설정"
     no connection friends: "%{connection} 친구들 중 YouVersion에 가입하시 분이 없습니다."
@@ -216,6 +222,7 @@ ko:
     my profile: "내 프로필"
     edit profile: "프로필 수정"
     update profile: "프로필 업데이트"
+    other user profile: "%{username}님의 프로필"
     my password: "비밀번호 변경"
     edit password: "비밀번호 변경"
     picture: "사진"
@@ -383,6 +390,7 @@ ko:
       publishing partners: "YouVersion 콘텐츠 파트너로 부터의 소식을 계속 받고 싶습니다."
       update: "알림기능 설정 업데이트"
   bookmarks:
+    new: "새로운 책갈피"
     edit: "편집"
     delete: "지정한 책갈피 삭제"
     title field: "제목"
@@ -440,6 +448,7 @@ ko:
     you have no plans: "현재 시작한 성경읽기계획은 없습니다."
     no public plans: "%{username}님의 공개된 읽기 계획이 없습니다."
     filter by lang: "언어별 계획 보기"
+    plan settings: "계획 설정"
     settings: "설정"
     search: "검색"
     search placeholder: "%{category} 항목 계획 검색"
@@ -449,8 +458,10 @@ ko:
     reading completed _ mark and show next: "다음: %{next_reference}"
     which reading: "%{total} 중 %{current}"
     done reading: "완료"
+    no verses: "오늘은 말씀이 없습니다."
     no content: "계획에 따르면 오늘 읽을 내용이 없어서 오늘은 자동으로 완료처리 되었습니다."
     read today: "오늘의 읽기 보기"
+    devotional: "묵상"
     completion status _ below percentage: "완료"
     current progress html: "<b>%{total_days}</b> 중 <b>%{day}</b> 일째"
     start date _ before date string: "시작 일자:"
@@ -501,21 +512,24 @@ ko:
     catch up successful: "잘 했습니다! 이제 읽기계획의 일정이 재조정 되었습니다."
     restart successful: "계획이 처음부터 다시 시작되었습니다."
     subscribe successful: "아주 잘 하셨습니다! 이 계획을 시작하셨습니다."
+    day number: "%{day} 일일"
     which day in plan: "%{total}일 중 %{day}일"
     must start to complete: "읽기를 저장하려면 먼저 이 읽기계획을 시작해야 합니다."
     invalid reference: "죄송합니다.  이 성경읽기에서 언급된 참고 구절중 일부가 이 번역본에는 없습니다.  다른 번역본을 선택해주세요.  이 메시지가 반복적으로 나타나면 <a href='%{support_url}'>지원팀</a> 으로 연락주십시요."
+    sidebar notice: "성경 읽기계획을 보고 계십니다."
   registration:
     placeholder:
       email: "이메일 주소를 입력해주세요"
       username: "사용자명을 입력해주세요"
       password: "비밀 번호를 입력해주세요"
     with email: "이메일 주소로 로그인"
-    with facebook: "페이스북 계정으로 등록"
+    with facebook: "페이스북 계정으로 로그인"
     benefits title: "완전한 체험을 하세요"
     benefits blurb: "YouVersion 계정을 만드시면 책갈피 및 노트와 같은 더 많은 기능들을 활용할 수 있습니다. 어느 기기에서 로그인을 하든지 관계 없이 확인이 가능합니다. 계정을 만들면 친구들과 말씀을 공유하는 것이 더 쉬워집니다. 지금 가입하세요!"
     plan blurb: "읽기 계획을 시작하기 원하시나요. 현명한 선택입니다!  읽기 계획들은 성경이 일상의 삶 속에 한 부분으로 자리잡을 수 있게 도와드릴 것입니다 . 아래에서 로그인 하거나  계정을 만든 후 바로 시작하세요."
     bookmark blurb: "책갈피 사용을 원하시는군요. 책갈피는 여러분이 기억하고 싶은 구절, 공유, 또는 즐겨찾기 등을 표시하는데 도움을 드릴 것입니다. 아래에서 로그인 하거나  계정을 만든 후 바로 시작하세요."
     friends blurb: "친구들과의 교류를 원하시는군요. 좋은 생각입니다! 배운 것을 친구들과 공유할 수 있고, 읽기 목표를 지킬 수 있도록 서로 도울 수 있습니다. 아래에서 로그인 하거나  계정을 만든 후 바로 시작하세요."
+    share blurb: "말씀을 나누고자 하시는군요! 페이스북이나 트위터를 통해 말씀을 나눌 수 있습니다. 로그인 하시거나 아래에서 계정을 만드시면 됩니다!"
     highlight blurb: "성경 구절을 하이라이트 하려고 하셨군요.  하이라이트는 좋아하는 구절들을 정리하고 다시 되새겨 보는데 많은 도움이 됩니다.  먼저 계정을 만든 후 로그인하여야 사용할 수 있습니다."
     note blurb: "성경 구절에 노트를  하려고 하셨군요.  노트는 하나님의 말씀 안에 있는 진리들을 기억하고 정리하는데 많은 도움이 됩니다.  먼저 계정을 만드신 후 로그인하여야 사용할 수있습니다."
   audio:
@@ -523,6 +537,7 @@ ko:
     chapter only: "죄송합니다. 오디오는 구절별로 제공되지 않습니다. 리더에서 해당 장으로 가서 오디오를 이용하세요."
     close player menu: "닫기"
   highlights:
+    choose color: "색깔을 선택하세요."
     creation error: "죄송합니다. 하이라이트를 할 수 없습니다."
     delete error: "죄송합니다. 하이라이트를 제거 할 수 없습니다."
   searching:
@@ -635,26 +650,26 @@ ko:
       our action: "알려주셔서 감사합니다.  즉시 처리되도록 최선을 다하겠습니다."
     home:
       hero:
-        heading: "스마트 폰, 태블렛, 컴퓨터에서 보는 무료 성경 "
-        description: "YouVersion 은 일상 삶중에 하나님의 말씀을 손쉽고 광고없이 보여주는 성경입니다."
+        heading: "스마트 폰, 태블렛, 컴퓨터용 무료 성경 "
+        description: "YouVersion 은 일상 삶 중에 하나님의 말씀을 보여주는 무료 성경입니다."
         learn more: "더 자세히 알아보기"
         start reading: "읽기 시작"
         skip in future: "더 이상 이 페이지 안보기"
         now skipped: "더 이상 이 페이지를 보여주지 않습니다."
       features:
         read heading: "성경 읽기"
-        read description: " <strong>각종언어로 번역된 수백개의 번역본</strong> 이 있습니다 . 두개의 번역본을 비교하시면서 읽으시거나, 원하시는 글꼴이나 크기로 온라인에서 성경을 읽으실 수있습니다."
-        study heading: "성경 공부"
-        study description: "선호하시는 색깔로 본문을 <strong>하이라이트</strong> 하시거나, 원하시는 구절을 <strong>책갈피</strong> 하실 수있습니다. 그리고 묵상하시는 내용을 노트에 남길 수도 있습니다. 하나님의 말씀을읽는 것에 그치지 않고 읽으시면서 느낀 점을 기록으로도 남길 수있습니다. "
-        subscribe heading: "성경 읽기 계획 구독신청"
-        subscribe description: "성경 전체를 완독하시거나, 주제별로 읽으실 수있습니다. 그리고 훌륭한 교사들의 묵상을 읽을 수도 있습니다.  성경읽기 계획을 선택하시기만 하면 매일 분량의 성경 내용이 자동으로 기다립니다."
-        download heading: "전천후 성경"
-        download description: "원하시는 이동기기에서 바이블 앱을 무료로 <a href='http://youversion.com/download'>다운로드</a> 받으세요. 개인 노트, 북마크, 하이라이트, 읽기 계획 등이 자동으로 동기화 되므로, 어떤 앱에서든   같은 내용을 보실 수있습니다."
+        read description: " <strong>각종언어로 번역된 수백개의 번역본</strong> 이 있습니다 . 두개의 번역본을 비교하면서 읽거나, 원하시는 글꼴이나 크기로 온라인에서 성경을 읽을 수 있습니다."
+        study heading: "성경 연구"
+        study description: "선호하시는 색깔로 본문을 <strong>하이라이트</strong> 하시거나, 원하는 구절을 <strong>책갈피</strong> 할 수있습니다. 그리고 묵상 내용을 노트에 남길 수도 있습니다. 하나님의 말씀을 읽는 것에 그치지 않고 읽으면서 느낀 점을 기록으로도 남길 수있습니다. "
+        subscribe heading: "성경 읽기계획"
+        subscribe description: "성경 전체를 통독하거나, 주제별로 읽을 수 있습니다. 그리고 훌륭한 분들의 묵상을 읽을 수도 있습니다.  성경 읽기계획을 선택하기만 하면 매일 분량의 성경 내용이 자동으로 공급됩니다."
+        download heading: "늘 함께 하는 성경"
+        download description: "원하는 이동기기에서 성경 앱을 무료로 <a href='http://youversion.com/download'>다운로드</a> 받으세요. 개인 노트, 책갈피, 하이라이트, 읽기 계획 등이 자동으로 동기화 되므로, 어떤 앱에서든 같은 내용을 보실 수있습니다."
       get started: "무료 계정을 지금 만드셔서 바로 시작하세요. "
       word with you: "하나님의 말씀이 당신과 함께 합니다."
-      download action: "바이블 앱 다운로드 하기"
-      download description: "무료인 YouVersion 바이블 앱을 여러분의 이동기기에 다운로드하시면 어디서든 여러분의 개인 성경을 읽으실 수있습니다."
-      world installs: "지구촌 전체에 걸쳐 설치되었습니다."
+      download action: "성경 앱 다운로드 하기"
+      download description: "YouVersion 무료 성경 앱을 여러분의 이동기기에 다운로드하시면 어디서든 성경과 함께 하실 수있습니다.수자"
+      world installs: "지구촌 전체에 설치되고 있는 성경 앱 숫자"
   shared:
     menu_settings:
       title: "설정내용"
@@ -669,6 +684,7 @@ ko:
       medium: "중"
       large: "대"
       highlights: "하이라이트"
+      contrast: "명암 대조"
       'on': "켜기"
       'off': "끄기"
       extras: "추가 기능"
@@ -682,6 +698,7 @@ ko:
     try again: "재시도"
   versions:
     filter: "번역본 필터..."
+    see all: "모든 번역본 보기"
     courtesy of: "%{abbreviation} 번역본은 %{publisher} 제공입니다."
     learn more: "더 알아보기"
     index title: "사용 가능한 번역본"
@@ -694,4 +711,4 @@ ko:
     language and count: "%{language_name} (%{language_count})"
     public domain: "공개판"
     loading: "번역본 추가 로딩중 ..."
-    load error: "번역본을 추가로 로딩하는 중 오류가 발생했습니다.  메뉴를 닫으신 후에 새로 시도를 해주세요."
+    load error: "번역본을 추가로 로딩하는 중 오류가 발생했습니다.  메뉴를 닫으신 후에 다시 시도를 해주세요."
