--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -46,7 +46,6 @@ mn:
   see users badges: "%{username} -н бүх авсан тэмдэгтүүдийг харах"
   followers: "Намайг Дагагчид"
   following: "Миний дагаж байгаа"
-  highlight: "Тодруулах"
   bookmark: "Хавчуурга"
   earned badge date: "%{username} %{ago} өмнө авсан"
   badges title: "Тэмдэгтүүд"
@@ -95,8 +94,13 @@ mn:
   search: "Хайх"
   book: "Ном"
   filter book: "Номууд Шүүх..."
+  save: "Хадгалах "
+  cancel: "Цуцлах"
   try the beta: "Beta ашиглаж үзэх"
   welcome to the beta: "Шинэ YouVersion.com-д тавтай морилно уу!"
+  highlight: "Ишлэл Тодруулах"
+  comment: "Шинэ Тэмдэглэл"
+  note: "Шинэ Тэмдэглэл"
   selected: "сонгосон"
   chapter: "Бүлэг"
   bible: "Библи"
@@ -121,6 +125,7 @@ mn:
   recent versions: "Сүүлд Хэрэглэсэн"
   or:
     lower: "эсвэл"
+    upper: "ЭСВЭЛ"
   likes:
     my likes: "Миний таалагдсан юмс"
     all likes: "Бүгд Таалагдсан"
@@ -184,6 +189,8 @@ mn:
   users:
     unverified heading: "Бараг Дуслаа!"
     unverified message: "Та бүтэн бүс данснд нэвтрэж байгаа юм шиг. Танд нэг л шат илүү байгаа: YouVersion-ээс авсан баталгаажуулах и-мэйлд байгаа хяналт линкнд дараарай. Олдсонгүй юу? Та спам и-мэйл шалгах уу эсвэл <a href='%{resend_path}'>баталгаахуулах и-мэйл дахин илгээх</a>."
+    not following you: "Таныг дагахгүй"
+    following you: "Таныг дагаж байна"
     reset connection: "Уучлаарай, алдаа заалаа. Дахин шинээр холболт хийнэ үү. "
     settings: "Тохиргоо "
     no connection friends: "Одоогоор таны %{connection} найзууд YouVersion-д бүртгэгдээгүй байна."
@@ -215,6 +222,7 @@ mn:
     my profile: "Миний мэдээлэл "
     edit profile: "Хэрэглэгчийн Тохиргоог Засах"
     update profile: "Хувийн Мэдээллээ Шинэчлэх"
+    other user profile: "%{username}-н Хувийн Мэдээлэл"
     my password: "Нууц Үг Солих "
     edit password: "Нууц үгээ Солих "
     picture: "Зураг"
@@ -382,6 +390,7 @@ mn:
       publishing partners: "YouVersion контент түншүүдийн мэдээг надад мэдэгдэх."
       update: "Мэдэгдэлүүд Шинэчлэх"
   bookmarks:
+    new: "Шинэ Хавчуурга"
     edit: "Засах "
     delete: "Энэ Хавчуургыг Устгах"
     title field: "Гарчиг "
@@ -448,8 +457,10 @@ mn:
     reading completed _ mark and show next: "Дараах: %{next_reference}"
     which reading: "%{total} -с %{current} "
     done reading: "Болсон"
+    no verses: "Өнөөдөр унших зүйл алга."
     no content: "Энэ өдөр таны уншлагын төлөвлөгөөнд ямар нэгэн зүйл байхгүй тул уншсан гэж тэмдэглэгдсэн байна."
     read today: "Өнөөдрийн унших төлөвлөгөөг үзэх"
+    devotional: "Чимээгүй Цаг"
     completion status _ below percentage: "Дууссан"
     current progress html: "<b>%{total_days}</b> -с <b>%{day}</b> өдөр"
     start date _ before date string: "Эхлэх Ѳдѳр"
@@ -500,9 +511,11 @@ mn:
     catch up successful: "Амжилт! Та төлөвлөгөөндөө эргээд нэгдлээ."
     restart successful: "Таны төлөвлөгөө эхнээсээ дахин эхэлэллээ."
     subscribe successful: "Гайхалтай! Та энэ уншлагын төлөвлөгөөнд нэгдлээ. "
+    day number: "Ѳдѳр %{day}"
     which day in plan: " %{total} -c %{day}  өдөр"
     must start to complete: " Дууссан уншлагаа хадгалахаар энэ тѳлѳвлѳгѳѳг эхлэх уу!"
     invalid reference: "Уучлаарай, Энэхүү уншлагт Библийн нэг ишлэлийн дугаар нь таны сонгосон Библийн орчуулгат байхгүй байж болзошгүй. Дээрх жагсаалтаас та өөр нэг Библийн орчлуулгыг сонгож үзээрэй. Хэрэт та хэвээрээ энэхүү үгсийг хүлээн авсаар байвал, манай <a href='%{support_url}'>дэмжлэгийн багт</a>  мэдэгдэнэ үү."
+    sidebar notice: "Та унших тѳлѳвлѳгѳѳг харагдаж байна."
   registration:
     placeholder:
       email: "И-мэйл хаягаа оруул"
@@ -515,6 +528,7 @@ mn:
     plan blurb: "Та унших төлөвлөгөө эхлэх хүсэлтэй байгаа бололтой. Ухаалаг алхам байна! Библийг амьдралынхаа өдөр тутмын нэг хэсэг болгоход төлөвлөгөөнууд танд туслах болно. Эхлэхийн тулд өөрийн бүртгэлээр нэвтрэх эсвэл шинэ бүртгэл үүсгээрэй!"
     bookmark blurb: "Та номны хавчуурга үүсгэх хүсэлтэй байгаа бололтой. Гайхалтай! Хавчуургууд нь таны дуртай, хуваалцах эсвэл цээжлэх хүсэлтэй байгаа ишлэлүүдээ алдалгүй дагахад тустай. Эхлэхийн тулд өөрийн бүртгэлээр нэвтрэх эсвэл шинэ бүртгэл үүсгээрэй!"
     friends blurb: "Та найзтайгаа харилцахыг хүсэж байгаа бололтой. Сайн байна! Та сурсан зүйлээ найзтайгаа хуваалцан мөн нэг нэгнээ хуваарийн дагуу уншихад туслах боломжтой. Эхлэхийн тулд өөрийн бүртгэлээр нэвтрэх эсвэл шинэ бүртгэл үүсгээрэй!"
+    share blurb: "Та ишлэл дамжуулахыг хүсэж байгаа бололтой. Гайхалтай! Та Facebook эсвэл Twitter-eer хуваалцаж болно. Эхлэхийн тулд өөрийн бүртгэлээр нэвтрэх эсвэл шинэ бүртгэл үүсгээрэй!"
     highlight blurb: "Та ишлэл тодруулахыг хүсэж байгаа бололтой? Сайн байна! Тодруулагч нь танд дуртай ишлэлүүдээ амархан олох болон цэгцтэй явхад тустай. Хэрэглэж эхлэхийн тулд өөрийн бүртгэлээр нэвтрэх эсвэл бүртгэл үүсгээрэй!"
     note blurb: "Та ишлэл дээр тэмдэглэл үүсгэх хүсэлтэй байгаа бололтой. Зүйтэй санаа байна! Тэмдэглэл нь танд Бурханы Үгсээс олж нээсэн зүйлсээ цэгцтэйгээр бичиж тэмдэглэн санахад тустай. Хэрэглэж эхлэхийн тулд өөрийн бүртгэлээр нэвтрэх эсвэл бүртгэл үүсгээрэй!"
   audio:
@@ -522,6 +536,7 @@ mn:
     chapter only: "Уучлаарай, ишлэлүүдийг аудиогоор сонсох боломжгүй. Уншигчийн бүлэг сонгох хэсгээс аудио боломжтой эсэхийг хараарай."
     close player menu: "Хаах"
   highlights:
+    choose color: "Ѳнгѳ Сонгох"
     creation error: "Уучлаарай, тодруулах боломжгүй байна."
     delete error: "Уучлаарай, тодруулга устгах боломжгүй байна."
   searching:
@@ -635,16 +650,25 @@ mn:
     home:
       hero:
         heading: "Үнэгүй Библи, таны утас, таб, болон компьютер дээр байна."
+        description: "YouVersion хялбар, рекламгүй Библээр Бурханы Үгс ѳдѳр тутмын амьдралдаа оруулна."
         learn more: "доороос илүү сур"
         start reading: "Уншиж эхлье"
+        skip in future: "Хуудсыг дахин бүү харуул."
+        now skipped: "Хуудсыг дахин харуулахгүй."
       features:
         read heading: "Библи Унш."
+        read description: "100 гаруй <strong>төрлийн орчуулга болон хэлний сонголт бий</strong>. Хоёр орчуулга хамт харьцуулаж болно.  Үсэг болно дэлгэцний хэмжээг сонгож болно. Та онлайн Библийн туршлагаа ѳѳрийнхѳѳ хувд бие болох үү."
         study heading: "Библи Сур."
+        study description: "Ѳнгѳѳр <strong>тодруулах</strong>, таалагдсан Библийн ишлэлүүдээ <strong>хавчуурга</strong> үүсгэх, мѳн сураж байгаа зүйлсийг тэмдэглэж болно. Та зөвхөн Бурханы Үгэнд цагийг өгч байгаа биш, та Библитэй харилцах түүхээ бичиж/байгуулж байна."
         subscribe heading: "Библийн Тѳлѳвлѳгѳѳг Бүртгүүлэх."
+        subscribe description: "Библийг бүхлээр нь бүрх, сэдэв дээр төвлөр, эсвэл билэг авяастай багшын бичээсийг унш. Төлөвлөгөөгөө сонгоод, таныг хүлээж буй Библийн сонголтыг та унших болно."
         download heading: "Библи тантай хамт авч явах."
+        download description: "Библи Апп ямар ч үнэгүй <a href='http://youversion.com/download'>Татаж Авах</a>"
       get started: "Үнэгүй данс нээх."
       word with you: "Бурханы Үгс тантай хамт."
       download action: "Библи Апп Татаж Авах"
+      download description: "Энэхүү үнэгүй Библи Апп хаана ч тантай хамт байх Библи зөөврийн хэрэгсэл дээрээ татан ав."
+      world installs: "Дэлхий даяархи суулгац"
   shared:
     menu_settings:
       title: "Таны Тохиргоо"
@@ -659,6 +683,7 @@ mn:
       medium: "Дунд"
       large: "Том"
       highlights: "Тодруулгууд:"
+      contrast: "Ѳнгѳ Харших"
       'on': "Асаах"
       'off': "Унтрах"
       extras: "Илүү:"
@@ -672,6 +697,7 @@ mn:
     try again: "Дахин Оролдоно уу"
   versions:
     filter: "Хувилбарууд Шүүх..."
+    see all: "Бүх Орчуулгууд Харах..."
     courtesy of: "%{abbreviation} танд %{publisher} -р дамжуулан аваачна"
     learn more: "Илүү Мэдэх"
     index title: "Унших Боломжтой Орчуулагууд"
@@ -684,3 +710,4 @@ mn:
     language and count: "%{language_name} (%{language_count})"
     public domain: "Нийтийн Хүртээл "
     loading: "Илүү Орчуулга Ачаалаж байна..."
+    load error: "Уучлаарай, илүү орчуулга ачааллахад алдаа гарлаа. Энэ цэсийг хаагаад дахин нэвтрэх үү."
