--- a/config/locales/ms.yml
+++ b/config/locales/ms.yml
@@ -46,7 +46,6 @@ ms:
   see users badges: "Lihat segala lencana %{username}"
   followers: "Pengikut"
   following: "Mengikuti"
-  highlight: "Highlight"
   bookmark: "Bookmark"
   earned badge date: "Diperolehi oleh %{username} %{ago} dahulu."
   badges title: "Lencana"
@@ -94,8 +93,12 @@ ms:
   search placeholder: "Kini Mencari..."
   search: "Cari"
   book: "Kitab"
+  save: "Selamatkan"
+  cancel: "Batalkan"
   try the beta: "Cubailah versi Beta"
   welcome to the beta: "Selamat datang ke YouVersion.com!"
+  highlight: "Highlight"
+  note: "Nota Baru"
   selected: "Terpilih"
   chapter: "Bab"
   bible: "Alkitab"
@@ -436,6 +439,7 @@ ms:
     you have no plans: "Anda kini tidak mengikuti sebarang pelan bacaan."
     no public plans: "Tiada pelan bacaan %{username} yang kelihatan."
     filter by lang: "Pilih Pelan mengikut Bahasa"
+    plan settings: "Setting Pelan"
     settings: "Setting"
     search: "Cari"
     search placeholder: "Cari Pelan %{category}"
@@ -637,6 +641,7 @@ ms:
       medium: "Sederhana"
       large: "Besar"
       highlights: "Highlight:"
+      contrast: "Kontras"
       'on': "Aktifkan"
       'off': "Batalkan"
       extras: "Ekstra:"
