--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -46,7 +46,6 @@ pt-BR:
   see users badges: "Ver todas as medalhas de %{username}"
   followers: "Seguidores"
   following: "Seguindo"
-  highlight: "Destaque"
   bookmark: "Marcador"
   earned badge date: "Ganha por %{username} há %{ago} atrás"
   badges title: "Medalhas"
@@ -95,8 +94,13 @@ pt-BR:
   search: "Procurar"
   book: "Livro"
   filter book: "Filtrar Livros..."
+  save: "Salvar"
+  cancel: "Cancelar"
   try the beta: "Experimente a versão Beta"
   welcome to the beta: "Bem vindo ao novo YouVersion.com!"
+  highlight: "Destaque um Versículo "
+  comment: "Novo Comentário "
+  note: "Nova Anotação"
   selected: "Selecionado\n"
   chapter: "Capítulo"
   bible: "Bíblia"
@@ -185,6 +189,8 @@ pt-BR:
   users:
     unverified heading: "Quase Pronto!"
     unverified message: "Parece que você está tentando entrar em uma conta que ainda não foi completamente estabelecida. Você tem mais uma etapa: simplesmente clique no link de verificação no e-mail que você recebeu do YouVersion. Não encontrou o e-mail? Cheque sua caixa de spam ou <a href='%{resend_path}'>reenvie e e-mail de confirmação</a>. "
+    not following you: "Não está seguindo você "
+    following you: "Está seguindo você"
     reset connection: "Desculpe, ocorreu um erro. Por favor desconecte a conexão e tente novamente. "
     settings: "Configurações"
     no connection friends: "Nenhum dos seus amigos do %{connection} parecem fazer parte do YouVersion ainda."
@@ -216,6 +222,7 @@ pt-BR:
     my profile: "Meu Perfil"
     edit profile: "Editar Perfil"
     update profile: "Atualizar Perfil"
+    other user profile: "Perfil de %{username}"
     my password: "Mudar Minha Senha"
     edit password: "Alterar a Senha"
     picture: "Foto"
@@ -383,6 +390,7 @@ pt-BR:
       publishing partners: "Me mantenha informado das novidades dos parceiros de conteúdo do YouVersion."
       update: "Atualizar Notificações"
   bookmarks:
+    new: "Novo Marcador "
     edit: "Editar"
     delete: "Apagar este Marcador"
     title field: "Título"
@@ -440,6 +448,7 @@ pt-BR:
     you have no plans: "Você não está inscrito em nenhum plano de leitura no momento."
     no public plans: "Não há planos de leitura visíveis para %{username}"
     filter by lang: "Filtrar Planos por Idioma"
+    plan settings: "Configurações do Plano"
     settings: "Configurações"
     search: "Procurar"
     search placeholder: "Procurar Planos de %{category}"
@@ -449,8 +458,10 @@ pt-BR:
     reading completed _ mark and show next: "Próximo: %{next_reference}"
     which reading: "%{current} de %{total}"
     done reading: "Pronto"
+    no verses: "Sem versículos para hoje "
     no content: "Seu plano de leitura não tem leitura das escrituras agendada para este dia então foi marcado como completo."
     read today: "Ver as Leituras de Hoje"
+    devotional: "Devocional "
     completion status _ below percentage: "Completo"
     current progress html: "Dia <b>%{day}</b> de <b>%{total_days}</b>"
     start date _ before date string: "Data de Início:"
@@ -501,9 +512,11 @@ pt-BR:
     catch up successful: "Sucesso! Agora você está em dia com a sua leitura."
     restart successful: "Seu Plano foi reiniciado do começo."
     subscribe successful: "Ótimo! Você agora está inscrito nesse plano."
+    day number: "Dia %{day}"
     which day in plan: "Dia %{day} de %{total}"
     must start to complete: "Comece este plano para salvar as leituras completadas!"
     invalid reference: "Desculpe, uma das referências de escritura para esta leitura pode não existir na versão selecionada. Tente selecionar uma versão diferente acima. Se continuar a receber esta mensagem, por favor avise nosso <a href='%{support_url}'>support team</a> sobre este problema. "
+    sidebar notice: "Você está visualizando um plano de leitura. "
   registration:
     placeholder:
       email: "Digite seu endereço de e-mail "
@@ -516,6 +529,7 @@ pt-BR:
     plan blurb: "Parece que você quer iniciar um Plano de Leitura. Muito bem! Os Planos de Leitura podem te ajudar a fazer com que a Bíblia seja uma parte do seu cotidiano. Acesse ou crie uma conta abaixo e comece!"
     bookmark blurb: "Parece que você quer usar um Marcador. Ótimo! Os marcadores o ajudam a acompanhar versículos que você queira memorizar, compartilhar ou marcar como favorito. Acesse ou crie uma conta abaixo e comece!"
     friends blurb: "Parece que você quer interagir com Amigos. Boa ideia! Vocês poderão compartilhar o que tem aprendido e ajudar uns aos outros a se manter em dia com suas metas de leitura. Acesse ou crie uma conta abaixo e comece!"
+    share blurb: "Parece que você está tentando compartilhar uma escritura. Ótimo! Você pode compartilhar pelo Facebook ou Twitter. É só fazer o login ou criar uma conta abaixo e começar! "
     highlight blurb: "Parece que você quer destacar uma escritura. Ótimo! Marcadores te ajudam a organizar e lembrar de seus versículos favoritos. Acesse ou crie uma conta abaixo e comece!"
     note blurb: "Parece que você quer fazer uma anotação sobre a escritura. Boa ideia! As anotações podem te ajudar a lembrar e organizar a verdade que você descobre na Palavra de Deus. Acesse ou crie uma conta abaixo e comece!"
   audio:
@@ -523,6 +537,7 @@ pt-BR:
     chapter only: "Desculpe, o áudio não está disponível para versículos. Ver no leitor o áudio do capítulo."
     close player menu: "Fechar"
   highlights:
+    choose color: "Escolha a cor "
     creation error: "Desculpe, não foi possível destacar."
     delete error: "Desculpe, não foi possível remover o destaque."
   searching:
@@ -645,7 +660,7 @@ pt-BR:
         read heading: "Leia a Bíblia. "
         read description: "Faça escolha entre <strong>centenas de versões Bíblicas e idiomas</strong>. Compare duas versões lado a lado. Você pode até mesmo escolher a fonte e o tamanho da exibição. Personalize sua experiência online da Bíblia. "
         study heading: "Estude a Bíblia. "
-        study description: "<strong>Destaque</strong> na sua cor favorita, <strong>marque</strong>seus versículos favoritos, e faça anotações sobre o que você está aprendendo. Você não estará apenas passando um tempo na Palavra de Deus, mas estará construindo uma história de interação com a Bíblia.  "
+        study description: "<strong>Destaque</strong> na sua cor favorita, <strong>marque</strong> seus versículos favoritos, e faça anotações sobre o que você está aprendendo. Você não estará apenas passando um tempo na Palavra de Deus, mas estará construindo uma história de interação com a Bíblia.  "
         subscribe heading: "Inscreva-se em Planos de Leitura de Bíblia. "
         subscribe description: "Leia toda a Bíblia, foque em um tópico ou leia um plano devocional de um mestre talentoso. Escolha um plano e a cada dia você encontrará uma seleção da Bíblia esperando por você. "
         download heading: "Leve a Bíblia com você. "
@@ -669,6 +684,7 @@ pt-BR:
       medium: "Médio"
       large: "Grande"
       highlights: "Destaques"
+      contrast: "Contraste "
       'on': "Ativado"
       'off': "Desativado"
       extras: "Extras: "
@@ -682,6 +698,7 @@ pt-BR:
     try again: "Tente Novamente"
   versions:
     filter: "Filtrar Versões..."
+    see all: "Ver Todas as Versões..."
     courtesy of: "%{abbreviation} disponibilizado a você por %{publisher}"
     learn more: "Saiba Mais"
     index title: "Versões Disponíveis "
