--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -46,7 +46,6 @@ pt-PT:
   see users badges: "Veja todas as medalhas de %{username}"
   followers: "Seguidores"
   following: "Seguindo"
-  highlight: "Destaque"
   bookmark: "Marcador"
   earned badge date: "Ganha por %{username} há %{ago}"
   badges title: "Medalhas"
@@ -95,8 +94,13 @@ pt-PT:
   search: "Procurar"
   book: "Livro"
   filter book: "Filtrar Livros..."
+  save: "Guardar"
+  cancel: "Cancelar"
   try the beta: "Experimente a versão Beta"
   welcome to the beta: "Benvindo ao novo YouVersion.com!"
+  highlight: "Destaque"
+  comment: "Novo Comentário"
+  note: "Nova Nota"
   selected: "Selecionado"
   chapter: "Capítulo"
   bible: "Bíblia"
@@ -185,6 +189,8 @@ pt-PT:
   users:
     unverified heading: "Quase Terminado!"
     unverified message: "Parece que está a tentar autenticar-se com uma conta cujo processo de configuração não foi terminado. Precisa de cumprir mais um passo: clique simplesmente no link de verificação presente no email de confirmação enviado pelo YouVersion. Não o consegue localizar? Verifique a sua pasta de spam ou <a href='%{resend_path}'>reenvie o email de confirmação</a>."
+    not following you: "não está a segui-lo(a)"
+    following you: "está a segui-lo(a)"
     reset connection: "Desculpe, ocorreu um erro. Por favor remova e volte a efetuar esta associação."
     settings: "Definições"
     no connection friends: "Ainda nenhum dos seus amigos %{connection} aparenta estar a usar o YouVersion."
@@ -216,6 +222,7 @@ pt-PT:
     my profile: "O Meu Perfil"
     edit profile: "Editar Perfil"
     update profile: "Atualizar Perfil"
+    other user profile: "Perfil de %{username}"
     my password: "Alterar a Minha Palavra-Passe"
     edit password: "Alterar Palavra-Passe"
     picture: "Imagem"
@@ -383,6 +390,7 @@ pt-PT:
       publishing partners: "Atualizem-me com notícias dos parceiros de conteúdo YouVersion."
       update: "Atualizar Notificações"
   bookmarks:
+    new: "Novo Marcador"
     edit: "Editar"
     delete: "Apagar este Marcador"
     title field: "Título"
@@ -440,6 +448,7 @@ pt-PT:
     you have no plans: "Até ao momento não subscreveu nenhum plano de leitura."
     no public plans: "%{username}.não tem planos de leitura visíveis."
     filter by lang: "Selecione Planos por Idioma"
+    plan settings: "Configurações do Plano"
     settings: "Definições"
     search: "Procurar"
     search placeholder: "Procurar Planos Na Categoria %{category}"
@@ -449,8 +458,10 @@ pt-PT:
     reading completed _ mark and show next: "A Seguir: %{next_reference}"
     which reading: "%{current} de %{total}"
     done reading: "Concluído"
+    no verses: "Não há versículos para hoje"
     no content: "O seu plano não tem leitura das escrituras agendada para o dia de hoje, por isso foi marcado como completo."
     read today: "Ver a Leitura de Hoje"
+    devotional: "Devocional"
     completion status _ below percentage: "Completo"
     current progress html: "Dia <b>%{day}</b> de <b>%{total_days}</b>"
     start date _ before date string: "Data de Início:"
@@ -501,9 +512,11 @@ pt-PT:
     catch up successful: "Sucesso! Tem a sua leitura em dia."
     restart successful: "O seu Plano recomeçou do início."
     subscribe successful: "Ótimo! Acabou de subscrever este plano."
+    day number: "Dia %{day}"
     which day in plan: "Dia %{day} de %{total}"
     must start to complete: "Comece este plano para guardar as leituras já completas!"
     invalid reference: "Desculpe, uma das referências às escrituras desta leitura pode não existir na versão selecionada. Tente selecionar em cima uma versão diferente. Se ainda assim continuar a ver esta mensagem, por favor informe a nossa <a href='%{support_url}'>equipe de suporte</a> sobre esta ocorrência."
+    sidebar notice: "Está a ver um plano de leitura."
   registration:
     placeholder:
       email: "Insira o seu endereço de email"
@@ -524,6 +537,7 @@ pt-PT:
     chapter only: "Desculpe, não está disponível áudio para os versículos. Verifique no leitor a opção áudio do capítulo."
     close player menu: "Fechar"
   highlights:
+    choose color: "Escolha a Cor"
     creation error: "Desculpe, não foi possível destacar."
     delete error: "Desculpe, não foi possível remover o destaque."
   searching:
@@ -636,9 +650,9 @@ pt-PT:
       our action: "Fomos notificados desta ocorrência e iremos tratar dela assim que for possível."
     home:
       hero:
-        heading: "Uma Bíblia gratuita no seu telefone, tablet e computador."
+        heading: "Uma Bíblia gratuita no seu telefone, tablet e pc."
         description: "A YouVersion é uma Bíblia simples, sem publicidade, que traz a Palavra de Deus à sua vida diária."
-        learn more: "saiba mais"
+        learn more: "saber mais"
         start reading: "Começar a ler"
         skip in future: "No futuro, saltar esta página"
         now skipped: "Não acederá mais a esta página "
@@ -646,11 +660,11 @@ pt-PT:
         read heading: "Leia a Bíblia."
         read description: "Faça a sua escolha a partir de <strong>centenas de versões da Bíblia em múltiplos idiomas</strong>. Compare duas versões em paralelo. Pode até escolher o tamanho e o tipo de fonte. Desfrute da leitura online da Bíblia da maneira mais conveniente para si."
         study heading: "Estude a Bíblia."
-        study description: "<strong>Destaque</strong> na sua cor preferida, <strong>adicione marcadores</strong> aos seus versículos da Bíblia preferidos, e crie notas sobre o que está a aprender. Não está apenas a passar tempo com a Palavra de Deus, mas a construir um histórico da sua interação com a Bíblia."
+        study description: "<strong>Destaque</strong> na sua cor preferida, <strong>adicione marcadores</strong> aos seus versículos da Bíblia preferidos, e crie notas sobre o que está a aprender, construindo assim um histórico da sua interação com a Bíblia."
         subscribe heading: "Subscreva um Plano de Leitura."
         subscribe description: "Leia a Bíblia toda, escolha um tema específico, ou leia um devocional escrito por um entendido. Escolha o seu plano e a cada dia irá encontrar um trecho da Bíblia à sua espera."
         download heading: "Leve a Bíblia consigo."
-        download description: "<a href='http://youversion.com/download'>Transfira</ a> gratuitamente a App da Bíblia em qualquer dispositivo móvel. Quando usar a App, as suas notas, marcadores, destaques e planos serão automaticamente sincronizados em todos os seus dispositivos."
+        download description: "<a href=\"http://youversion.com/download\">Transfira</a> gratuitamente a App da Bíblia em qualquer dispositivo móvel. Quando usar a App, as suas notas, marcadores, destaques e planos serão automaticamente sincronizados em todos os seus dispositivos."
       get started: "Comece com a sua conta gratuita."
       word with you: "A Palavra de Deus está consigo."
       download action: "Transfira a App da Bíblia"
@@ -670,6 +684,7 @@ pt-PT:
       medium: "Médio"
       large: "Grande"
       highlights: "Destaques"
+      contrast: "Contraste"
       'on': "Ligado"
       'off': "Desligado"
       extras: "Extras:"
@@ -683,6 +698,7 @@ pt-PT:
     try again: "Tente Novamente"
   versions:
     filter: "Filtrar Versões..."
+    see all: "Ver Todas as Versões..."
     courtesy of: "%{abbreviation} trazido até si por %{publisher}"
     learn more: "Saiba mais"
     index title: "Versões Disponíveis"
