--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -46,7 +46,6 @@ sq:
   see users badges: "Shiko të gjitha emblemat e përdoruesit %{username}"
   followers: "Ndjekës"
   following: "Të ndjekur"
-  highlight: "Thekso"
   bookmark: "Shëno"
   earned badge date: "Fituar nga përdoruesi %{username} %{ago} më parë"
   badges title: "Emblema"
@@ -95,8 +94,13 @@ sq:
   search: "Kërko"
   book: "Libri"
   filter book: "Filtro librat..."
+  save: "Ruaj"
+  cancel: "Anulo"
   try the beta: "Provoni versionin Beta"
   welcome to the beta: "Mirë se vini te YouVersion.com i ri!"
+  highlight: "Thekso"
+  comment: "Koment i ri"
+  note: "Shënim i ri"
   selected: "I përzgjedhur"
   chapter: "Kapitulli"
   bible: "Bibla"
@@ -185,6 +189,8 @@ sq:
   users:
     unverified heading: "Pothuaj mbaroi!"
     unverified message: "Me sa duket po përpiqeni të kyçeni në një llogari që nuk është regjistruar plotësisht. Ju ka ngelur edhe një hap më shumë: thjesht klikoni në hallkën lidhëse në e-postën e verifikimit që morët nga YouVersion. Nuk mund ta gjeni? Kontrolloni dosjen \"Spam\" ose <a href='%{resend_path}'>dërgoni sërish e-postën e konfirmimit</a>."
+    not following you: "nuk po të ndjek"
+    following you: "po të ndjek"
     reset connection: "Ju kërkojmë ndjesë, ka ndodhur një gabim. Ju lutemi hiqeni dhe lidheni sërish këtë lidhje."
     settings: "Cilësimet"
     no connection friends: "Asjnë nga miqtë e tu në %{connection} nuk duket se është akoma në YouVersion."
@@ -216,6 +222,7 @@ sq:
     my profile: "Profili im"
     edit profile: "Redakto profilin"
     update profile: "Përditëso profilin"
+    other user profile: "Profili për përdoruesin %{username}"
     my password: "Ndrysho fjalëkalimin tim"
     edit password: "Ndrysho fjalëkalimin"
     picture: "Foto"
@@ -383,6 +390,7 @@ sq:
       publishing partners: "Më mbaj të përditësuar për lajmet rreth përmbajtjes së partnerëve të YouVersion."
       update: "Përditëso njoftimet"
   bookmarks:
+    new: "Shenjues i ri"
     edit: "Redakto"
     delete: "Fshije këtë shenjues"
     title field: "Titulli"
@@ -440,6 +448,7 @@ sq:
     you have no plans: "Ju nuk jeni të abonuar në ndonjë plan leximi për momentin."
     no public plans: "Asnjë plan leximi nuk është i dukshëm për përdoruesin %{username}."
     filter by lang: "Filtro planet sipas gjuhës"
+    plan settings: "Cilësimet e planit"
     settings: "Cilësimet"
     search: "Kërko"
     search placeholder: "Kërko planet %{category}"
@@ -449,8 +458,10 @@ sq:
     reading completed _ mark and show next: "Referimi tjetër: %{next_reference}"
     which reading: "%{current} nga %{total}"
     done reading: "I kryer"
+    no verses: "Nuk ka vargje për sot"
     no content: "Plani juaj nuk ka lexime biblike të planifikuara për këtë ditë, kështu që është shënuar si i përfunduar."
     read today: "Shiko leximin e ditës së sotme"
+    devotional: "Devocional"
     completion status _ below percentage: "i përfunduar"
     current progress html: "Dita <b>%{day}</b> nga <b>%{total_days}</b>"
     start date _ before date string: "Data e fillimit:"
@@ -501,9 +512,11 @@ sq:
     catch up successful: "Sukses! Ju tani jeni në kohë me leximet tuaja."
     restart successful: "Plani juaj ka rifilluar nga fillimi."
     subscribe successful: "Shkëlqyeshëm! Ju jeni abonuar në këtë plan."
+    day number: "Dita %{day}"
     which day in plan: "Dita %{day} nga %{total}"
     must start to complete: "Filloje këtë plan për të ruajtur leximet e përfunduara!"
     invalid reference: "Na vjen keq, një nga referimet biblike për këtë lexim mund të mos ekzistojë në versionin e zgjedhur. Provoni të zgjidhni një version tjetër, lart. Nëse vazhdoni ta shihni këtë mesazh, bëjani të ditur <a href='%{support_url}'>grupit të ndihmës</a> këtë problem."
+    sidebar notice: "Jeni duke parë një plan leximi."
   registration:
     placeholder:
       email: "Futni adresën tuaj elektronike"
@@ -524,6 +537,7 @@ sq:
     chapter only: "Më vjen keq, audio nuk është e disponueshme për vargjet. Shihni te lexuesi për kapitujt me audio."
     close player menu: "Mbyll"
   highlights:
+    choose color: "Zgjidhni ngjyrën"
     creation error: "Na falni, theksimi nuk mund të kryhet."
     delete error: "Më vjen keq, nuk mund të heq theksimin."
   searching:
@@ -606,7 +620,7 @@ sq:
       screencast: "Screencast i YouVersion"
     links title: "Hallkat lidhëse të mbulimit mediatik"
   mobile page:
-    h2: "Fjala e Perëndisë është me ty."
+    h2: "Fjala e Zotit është me ty."
     h3: "YouVersion është Global"
     h3 sub: "E disponueshme në më shumë se 100 gjuhë në mbarë botën."
     main: "Dhjetëra miliona njerëz po përdorin Programin e Biblës&trade; për ta bërë Fjalën e Perëndisë pjesë të jetës së tyre të përditshme. Shkarko programin falas dhe përdor shenjuesit e tu, shënimet dhe planet e leximit kudo. Shijo qindra versione, duke përfshirë ato audio, në aparatin tuaj celular."
@@ -655,7 +669,7 @@ sq:
       word with you: "Fjala e Perëndisë është me ty."
       download action: "Shkarko Programin e Biblës"
       download description: "Shkarko falas Programin e Biblës YouVersion në pajisjen tuaj të lëvizshme dhe do ta kesh Biblën me vete në çdo vend që të shkosh."
-      world installs: "Instalime nëpër botë"
+      world installs: "instalime nëpër botë"
   shared:
     menu_settings:
       title: "Cilësimet e tua"
@@ -670,6 +684,7 @@ sq:
       medium: "Mesatar"
       large: "I madh"
       highlights: "Theksimet:"
+      contrast: "Kontrasti"
       'on': "Ndezur"
       'off': "Fikur"
       extras: "Ekstra:"
@@ -683,6 +698,7 @@ sq:
     try again: "Provoni sërish"
   versions:
     filter: "Filtro versionet..."
+    see all: "Shiko të gjitha versionet..."
     courtesy of: "%{abbreviation} është sjellë te ju nga %{publisher}"
     learn more: "Mëso më shumë"
     index title: "Versione të disponueshme"
