--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -46,7 +46,6 @@ sv:
   see users badges: "Se alla %{username}s medaljer"
   followers: "Följare"
   following: "Följer"
-  highlight: "Markering"
   bookmark: "Bokmärke"
   earned badge date: "Förtjänad av %{username} för %{ago} sedan"
   badges title: "Medaljer"
@@ -95,8 +94,13 @@ sv:
   search: "Sök"
   book: "Bok"
   filter book: "Filtrera böcker..."
+  save: "Spara"
+  cancel: "Avbryt"
   try the beta: "Prova betan"
   welcome to the beta: "Välkommen till nya YouVersion.com!"
+  highlight: "Markera vers"
+  comment: "Ny kommentar"
+  note: "Ny anteckning"
   selected: "Markerat"
   chapter: "Kapitel"
   bible: "Bibeln"
@@ -121,6 +125,7 @@ sv:
   recent versions: "Senast använda"
   or:
     lower: "eller"
+    upper: "ELLER"
   likes:
     my likes: "Mina gillade"
     all likes: "Alla gillade"
@@ -184,6 +189,8 @@ sv:
   users:
     unverified heading: "Nästan klar!"
     unverified message: "Det ser ut som att du försöker logga in med ett konto som inte färdigkonfigurerat än.  Du har bara ett steg kvar: klicka helt enkelt på verifieringslänken i e-brevet med bekräftelse som du har fått från YouVersion. Kan du inte hitta det? Kolla bland skräppost eller <a href='%{resend_path}'>Skicka om e-brevet med bekräftelse</a>."
+    not following you: "Följer dig inte"
+    following you: "Följer dig"
     reset connection: "Ett fel har tyvärr inträffat. Stäng ner och försök sedan att återansluta."
     settings: "Inställningar"
     no connection friends: "Ingen av dina vänner på %{connection} finns ännu på YouVerson."
@@ -215,6 +222,7 @@ sv:
     my profile: "Min profil"
     edit profile: "Redigera profil"
     update profile: "Uppdatera profil"
+    other user profile: "%{username}s profil"
     my password: "Ändra mitt lösenord"
     edit password: "Ändra lösenord"
     picture: "Bild"
@@ -382,6 +390,7 @@ sv:
       publishing partners: "Håll mig uppdaterad om nyheter från YouVersions innehållspartner."
       update: "Uppdateringsmeddelanden"
   bookmarks:
+    new: "Nytt bokmärke"
     edit: "Ändra"
     delete: "Ta bort detta bokmärke"
     title field: "Titel"
@@ -439,6 +448,7 @@ sv:
     you have no plans: "Du följer inga läsplaner just nu."
     no public plans: "Inga läsplaner är synliga för %{username}."
     filter by lang: "Filtrera planer efter språk"
+    plan settings: "Inställningar för läsplan"
     settings: "Inställningar"
     search: "Sök"
     search placeholder: "Sök planer i %{category}"
@@ -448,8 +458,10 @@ sv:
     reading completed _ mark and show next: "Nästa: %{next_reference}"
     which reading: "%{current} av %{total}"
     done reading: "Klar"
+    no verses: "Inga verser idag"
     no content: "Din plan har ingen schemalagd skriftläsning idag, så den har markerats som färdig."
     read today: "Visa dagens läsning"
+    devotional: "Andakt"
     completion status _ below percentage: "Klar"
     current progress html: "Dag <b>%{day}</b> av <b>%{total_days}</b>"
     start date _ before date string: "Startdatum:"
@@ -500,9 +512,11 @@ sv:
     catch up successful: "Din läsplan är nu justerad."
     restart successful: "Din läsplan har återställts."
     subscribe successful: "Toppen! Du prenumererar nu på planen."
+    day number: "Dag %{day}"
     which day in plan: "Dag %{day} av %{total}"
     must start to complete: "Starta denna läsplan för att spara utförd läsning!"
     invalid reference: "En av skrifterna refererade för denna läsning verka inte existera i den valda översättningen. Försök att välja en annan översättning ovan. Om du fortsätter se detta meddelande, var snäll och meddela vår <a href='%{support_url}'>supportgrupp</a> om problemet. "
+    sidebar notice: "Du visar en läsplan."
   registration:
     placeholder:
       email: "Ange din e-postadress"
@@ -515,6 +529,7 @@ sv:
     plan blurb: "Det ser ut som att du vill starta en läsplan. Smart! Planer kan hjälpa dig att göra Bibeln till en del av din vardag. Logga in eller skapa ett konto nedan och kom igång!"
     bookmark blurb: "Det ser ut som att du vill använda bokmärken. Fantastiskt! Bokmärken hjälper dig att hålla ordning på verser du vill komma ihåg eller markera som favoriter. Logga in eller skapa ett konto nedan och kom igång!"
     friends blurb: "Det ser ut som att du vill interagera med dina vänner. Bra idé! Ni kommer kunna dela vad ni lär er och hjälpa varandra att följa läsplaner. Logga in eller skapa ett konto och kom igång!"
+    share blurb: "Det verka som att du vill dela skriften. Fantastiskt! Du kommer kunna dela skriften via Facebook eller Twitter. Logga in eller skapa ett konto nedan för komma igång!"
     highlight blurb: "Det ser ut som att du vill markera i Skriften. Fantastiskt! Markeringar hjälper dig att organisera och hålla reda på dina favoritverser. Logga in eller skapa ett konto nedan och kom igång!"
     note blurb: "Det ser ut som att du vill skapa en anteckning om Skriften. Bra tänkt! Anteckningar kan hjälpa dig att komma ihåg och organisera sanningen du hittar i Guds Ord. Logga in eller skapa ett konto nedan och kom igång!"
   audio:
@@ -522,6 +537,7 @@ sv:
     chapter only: "Ljud är inte tillgänglig för verser. Visa i läsaren för kapitelljud."
     close player menu: "Stäng"
   highlights:
+    choose color: "Välj färg"
     creation error: "Kunde inte markera."
     delete error: "Kunde inte ta bort markering."
   searching:
@@ -634,26 +650,26 @@ sv:
       our action: "Vi har meddelats om detta och kommer att ta tag i det så snart som möjligt."
     home:
       hero:
-        heading: "En gratis Bibel på din telefon, läsplatta och dator."
+        heading: "En gratis Bibel i din telefon, läsplatta och dator."
         description: "YouVersion är en enkel, reklamfri Bibelapp som tar Guds Ord in i ditt dagliga liv."
-        learn more: "Lär dig mer nedan"
-        start reading: "Börja läsning"
+        learn more: "lär dig mer nedan"
+        start reading: "Börja läs"
         skip in future: "Hoppa över den här sidan i framtiden"
         now skipped: "Den här sidan hoppas nu över."
       features:
         read heading: "Läs Bibeln."
-        read description: "Välj bland <strong> hundratals bibelöversättningar och språk</strong>. Jämför två översättningar sida vid sida. Du kan till och med välja vilket typsnitt och storlek som visas. Anpassa din Bibelupplevelse helt efter din personliga smak."
+        read description: "Välj bland <strong>hundratals bibelöversättningar och språk</strong>. Jämför två översättningar sida vid sida. Du kan till och med välja vilket typsnitt och storlek som visas. Anpassa din Bibelupplevelse helt efter din personliga smak."
         study heading: "Studera Bibeln."
         study description: "<strong>Markera</strong> i din favoritfärg, <strong>spara</strong> dina favoritverser och anteckna det du lär dig. Du spenderar inte bara tid i Guds Ord, utan du bygger din historia över hur du interagerar med Bibeln."
-        subscribe heading: "Anmäl dig till Bibelplaner."
+        subscribe heading: "Följ bibelplaner."
         subscribe description: "Läs hela Bibeln, fokusera på ett ämne eller läs en andakt från en begåvad lärare. Välj en plan så har du ett urval ur Bibeln som väntar dig varje dag."
         download heading: "Ta Bibeln med dig."
-        download description: "<a href='http://youversion.com/download'>Ladda ner</a> Bibel-appen gratis till alla mobila enheter. När du använder den mobila appen så synkroniseras dina anteckningar, bokmärken, markeringar och planer på samtliga dina enheter."
-      get started: "Kom igång med ditt gratis-konto."
+        download description: "<a href='http://youversion.com/sv/download'>Ladda ner</a> Bibelappen gratis till alla dina mobila enheter. När du använder mobilappen synkroniseras dina anteckningar, bokmärken, markeringar och planer till samtliga dina enheter."
+      get started: "Kom igång med ditt gratiskonto."
       word with you: "Guds Ord är med dig."
-      download action: "Ladda hem Bibel-appen"
-      download description: "Ladda ner din gratisversion av Bibel-appen i din mobil så har du med dig Bibeln var du än går."
-      world installs: "Installeras runt om i världen"
+      download action: "Ladda ner Bibelappen"
+      download description: "Ladda ner din gratisversion av Bibelappen till din mobila enhet så har du med dig Bibeln var du än går."
+      world installs: "Installationer runt om i världen"
   shared:
     menu_settings:
       title: "Läsinställningar"
@@ -668,6 +684,7 @@ sv:
       medium: "Medel"
       large: "Stor"
       highlights: "Markeringar"
+      contrast: "Kontrast"
       'on': "På"
       'off': "Av"
       extras: "Extra:"
@@ -681,6 +698,7 @@ sv:
     try again: "Försök igen"
   versions:
     filter: "Filtrera översättningar..."
+    see all: "Se alla översättningar..."
     courtesy of: "%{abbreviation} tillhandahållen av %{publisher}"
     learn more: "Läs mer"
     index title: "Tillgängliga översättningar"
@@ -692,5 +710,5 @@ sv:
     number of languages field: "Totalt antal språk:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Allmän egendom"
-    loading: "Laddar fler versioner..."
-    load error: "Beklagar, ett problem uppstod och det gick inte att ladda ner fler versioner. Stäng denna meny och starta om för att försöka igen."
+    loading: "Laddar fler översättningar..."
+    load error: "Beklagar, ett problem uppstod och det gick inte att ladda ner fler översättningar. Stäng denna meny och starta om för att försöka igen."
