--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -46,7 +46,6 @@ tr:
   see users badges: "%{username} adlı kullanıcının rozetlerini görüntüle"
   followers: "Takipçiler"
   following: "Takip ettikleri"
-  highlight: "Vurgu"
   bookmark: "Yer İmi"
   earned badge date: "%{username} tarafından %{ago} önce kazanıldı"
   badges title: "Rozetler"
@@ -95,8 +94,13 @@ tr:
   search: "Ara"
   book: "Kitap"
   filter book: "Kitapları Filtrele..."
+  save: "Kaydet"
+  cancel: "İptal"
   try the beta: "Beta sürümünü dene"
   welcome to the beta: "Yenilenmiş YouVersion.com'a hoşgeldiniz!"
+  highlight: "Ayeti vurgula"
+  comment: "Yeni Yorum"
+  note: "Yeni Not"
   selected: "Seçili"
   chapter: "Bölüm"
   bible: "Kutsal Kitap"
@@ -121,6 +125,7 @@ tr:
   recent versions: "En Son Kullanılan"
   or:
     lower: "veya"
+    upper: "VEYA"
   likes:
     my likes: "Beğendiklerim"
     all likes: "Bütün Beğendiklerim"
@@ -134,6 +139,7 @@ tr:
     no community notes: "Seçili ayetleri kasteden toplum notları bulunmadı. Bir notu yaratmak için, Kutsal Kitap okuyucusundan bir not seçin. Ondan sonra okuyucunun tepesindeki Seçili düğmesini tıklayın."
     public: "Topluma Açık"
     private: "Özel"
+    is private: "Telep edilen not özeldir."
     draft: "Taslak"
     creation form errors: "Notunuz şu hatalardan dolayı yaratılamadı:"
     reference field: "Ayet(ler):"
@@ -159,7 +165,7 @@ tr:
     see my likes: "Beğendiklerimin Hepsini Görüntüle"
     successfully deleted: "Not Silindi"
   ref:
-    loading secondary: "Ayetler İkincil Çeviride Yüklenmektedir..."
+    loading secondary: "Ayetler İkincil Çeviride Yükleniyor..."
     clear verses: "Seçili Ayetleri Sıfırla"
     choose book and chapter: "Kitap ve Bölüm Seçimi"
     choose version: "Çeviri Seçimi"
@@ -183,6 +189,8 @@ tr:
   users:
     unverified heading: "Az Daha Bitti"
     unverified message: "Kurulumu tamamen bitmemiş olan bir hesap ile giriş yapıyorsunuz gibi görünüyor. Hesabınızı kullanabilmeniz için yapmanız gereken bir şey var: YouVersion’dan aldığınız doğrulama e-Postasındaki linki tıklayın. e-Postayı bulamıyor musunuz? İstenmeyen Posta kutunuzu kontrol edin veya <a href='%{resend_path}'>doğrulama e-Postasını yeniden isteyin</a>."
+    not following you: "Sizi takip etmiyor"
+    following you: "Sizi takip ediyor"
     reset connection: "Bir hata oluştu, özür dileriz. Lütfen bu bağlantıyı kesip yeniden bağlanın."
     settings: "Ayarlar"
     no connection friends: "%{connection} sosyal ağındaki arkadaşlarınızın hiçbiri YouVersion'e kayıtlı değil."
@@ -214,6 +222,7 @@ tr:
     my profile: "Profilim"
     edit profile: "Profili Düzenle"
     update profile: "Profili Güncelle"
+    other user profile: "%{username} — Profil"
     my password: "Parolamı Değiştir"
     edit password: "Parolayı Değiştir"
     picture: "Resim"
@@ -381,6 +390,7 @@ tr:
       publishing partners: "YouVersion'ın içerik sunan ortakları hakkında beni devamlı olarak bilgilendirin."
       update: "Bildirimleri Güncelle"
   bookmarks:
+    new: "Yeni Yer Imi"
     edit: "Düzenle"
     delete: "Geçerli Yer İmini Sil"
     title field: "Başlık"
@@ -438,6 +448,7 @@ tr:
     you have no plans: "Herhangi bir Okuma Planına abone değilsiniz."
     no public plans: "%{username} adlı kullanıcının görüntülemeye izin verdiği herhangi bir Okuma Planı yok."
     filter by lang: "Planları Diline Göre Filtrele"
+    plan settings: "Okuma planı ayarları"
     settings: "Ayarlar"
     search: "Ara"
     search placeholder: "%{category} Konulu Planlarda Ara"
@@ -447,8 +458,10 @@ tr:
     reading completed _ mark and show next: "Sonraki: %{next_reference}"
     which reading: "%{current} / %{total}"
     done reading: "Tamam"
+    no verses: "Bugün için ayet yok."
     no content: "Okuma planınızda bugün için içerik bulunmuyor. Planınız tamamlanmış olarak işaretlendi."
     read today: "Bugünün Okumasını Göster"
+    devotional: "Teşvik Sözleri"
     completion status _ below percentage: "Tamamlandı"
     current progress html: "<b>%{total_days}</b> günden <b>%{day}.</b> gün"
     start date _ before date string: "Başlangıç Tarihi:"
@@ -499,16 +512,24 @@ tr:
     catch up successful: "Günlük okumanızı eriştiniz!"
     restart successful: "Okuma Planınız yeniden baştan başladı."
     subscribe successful: "Muhteşem! Bu Okuma Planına abonesiniz."
+    day number: "%{day}. gün"
     which day in plan: "%{total} günden %{day}. gün"
     must start to complete: "Okuma ilerlemenizi kaydedebilmek için bu okuma planına başlayın."
     invalid reference: "Özür dileriz. Bu okumada bulunan ayetlerin bazıları seçtiğiniz çeviride bulunmamaktadır. İlk olarak yukarıdan başka bir çeviriyi seçmeyi deneyiniz. Bu mesajı görmeye devam ederseniz, <a href='%{support_url}'>destek takımı</a> ile irtibata geçip, onlara sorunu bildiriniz."
+    sidebar notice: "Bır okuma planına göz atıyorsunuz."
   registration:
+    placeholder:
+      email: "E-posta adresinizi giriniz"
+      username: "Kullanıcı adınızı giriniz"
+      password: "Parolanızı giriniz"
+    with email: "E-posta adresinizi kullanarak kaydolun."
     with facebook: "Facebook Kimliğini Kullanarak Kaydol"
     benefits title: "Deneyimlerin Tamamına Erişin"
     benefits blurb: "YouVersion hesabını oluşturursanız, sitemizdeki birçok özelliğe erişebilirsiniz. Bunların arasında yer imi saklamak veya not yazmak vardır. Giriş yaptığınız mobil cihazınızda görüntülenirler. Hesabınız olursa, Kutsal Kitap'ı arkadaşlarınız ile paylaşmanız çok kolaylaşır. Hadi, gelin. Hesabınızı oluşturun!"
     plan blurb: "Bir Okuma Planı kullamak istiyor musunuz? Çok akıllıca! Okuma Planları, Kutsal Kitap’ı günlük hayatınızın bir parçası haline getirmeye çok yardımcı olur. Başlamak için aşağıdan giriş yapın veya bir hesap oluşturun!"
     bookmark blurb: "Yer İmleri kullanmak istiyor musunuz? Süper! Yer İmleri size hatırlamak istediğiniz ayetlere ulaşmanıza yardımcı olur. Belki ayeti ezberlemek isterseniz. Yoksa onu başkalarla paylaşmak istersiniz. Başlamak için aşağıdan giriş yapın veya bir hesap oluşturun!"
     friends blurb: "Arkadaşlar ile iletişim kurmak istiyor musunuz? İyi fikir! Böylece öğrendikleriniz paylaşabilirsiniz. Birbirinize günlük okumanızda devam edebilmek için destek olabilirsiniz. Başlamak için aşağıdan giriş yapın veya bir hesap oluşturun!"
+    share blurb: "Bir ayet veya bölüm paylaşmak mı istiyorsunuz? Harika! Facebook ve Twitter aracılığıyla Kutsal Kitap'ı paylaşabilirsiniz. Paylaşmaya başlamak için aşağıdan giriş yapın veya kaydolun."
     highlight blurb: "Kutsal yazıları vurgulamak istiyorsunuz. Süper! Vurgular en sevdiğiniz ayetleri toplayıp takip edebilmenizi sağlar. Başlamak için aşağıdan giriş yapın veya bir hesap oluşturun."
     note blurb: "Kutsal yazıların içeriğine dair bir not tutmak istiyorsunuz. İyi fikir! Notlar size Tanrı’nın Sözünden öğrendikleriniz gerçekleri saklayıp hatırlamanızı sağlar. Başlamak için aşağıdan giriş yapın veya bir hesap oluşturun."
   audio:
@@ -516,6 +537,7 @@ tr:
     chapter only: "Ayetler için ses kayıtları bulunmamaktadır. Bölümün ses kaydını dinleyebilmek için ayetleri okuyucuda görüntüleyin."
     close player menu: "Kapat"
   highlights:
+    choose color: "Renk seçiniz"
     creation error: "Vurgu eklenilemedi. Özür dileriz."
     delete error: "Vurgu silinemedi. Özür dileriz"
   searching:
@@ -541,7 +563,7 @@ tr:
     card exp date: "Son kullanım tarihi (AAYY)"
     receipt: "Makbuzumu e-Posta adresime gönder."
     preview: "Bağış Önizlemesi"
-    header copy: "Beraber çalışırsak, Kutsal Kitap’ı en çok okuyup kullanan nesil olabiliriz. Desteğiniz Tanrı’nın Sözünün değişik değişik yazılım platformlarında, dillerde ve ülkelerde kullanılmasına yol açar. Aşağıdaki formu doldurarak bağışta bulunun. Ödemeyi bir sonraki ekrandan yapacaksınız."
+    header copy: "Beraber çalışırsak, Kutsal Kitap’ı en çok okuyup kullanan nesil olabiliriz. Desteğiniz Tanrı’nın Sözü'nün değişik değişik yazılım platformlarında, dillerde ve ülkelerde kullanılmasına yol açar. Aşağıdaki formu doldurarak bağışta bulunun. Ödemeyi bir sonraki ekrandan yapacaksınız."
     header confirm copy: "Beraber çalışırsak, Kutsal Kitap’ı en çok okuyup kullanan nesil olabiliriz. Desteğiniz Tanrı’nın Sözünün değişik değişik yazılım platformlarında, dillerde ve ülkelerde kullanılmasına yol açar. Bağışta Bulun düğmesini tıklayarak bağışınızı gönderin."
     donate now button: "Bağışta Bulun"
     email header: "LifeCurch.tv'nin bir hizmeti olan YouVersion bağışınızı almıştır. Bu bağış karşılığında mücerret dini menfaatler haricinde herhangi bir mal veya hizmet verilmemiştir. Sorularınız için lütfen giving@lifechurch.tv adresinden bizimle irtibata geçiniz. "
@@ -593,6 +615,7 @@ tr:
       logos: "YouVersion Logo Paketi"
       icons: "Kutsal Kitap Uygulaması Resimleri"
       infographic: "Bilgi Resimi: Kutsal Kitap Uygulamasının İstatistikleri ve Kullanımı"
+      devices: "Resim Koleksyonu: Cihazlar"
       lifestyle: "Resim Koleksyonu: Yaşam Tarzı"
       screencast: "YouVersion Ekran Kaydı"
     links title: "Medyada Yer Alma Linkleri"
@@ -625,23 +648,46 @@ tr:
       title: "Eyvah!"
       explanation: "Altyapımızda bir hata oldu. Sayfayı yeniden yüklemeyi deneyebilirsiniz. Kusurumuza bakmayın."
       our action: "Sorun bize bildirildi ve onu olabildiğince kadar çabuk çözmeye çabalıyoruz."
+    home:
+      hero:
+        heading: "Cep telefonunuz, tabletiniz ve bilgisayarınız için ücretsiz bir Kutsal Kitap."
+        description: "YouVersion Tanrı'nın Sözünü hayatınızn bir parçası haline getiren basit, reklamsız Kutsal Kitap yazılımıdır."
+        learn more: "aşağıda daha fazla öğrenin"
+        start reading: "Okumaya başlayın."
+        skip in future: "Sonraki ziyaretlerde bu sayfayı gösterme."
+        now skipped: "Bu sayfa artık gösterilmeyecek."
+      features:
+        read heading: "Kutsal Kitap'ı okuyun."
+        read description: "<strong>Yüzlerce dildeki yüzlerce çeviriden</strong> seçiniz. İki  çeviri yan yana koyup karşılaştırın. Yazı tipi ve görüntü boyutunu bile ayarlayabilirsiniz. On-line Kutsal Kitap deneyiminiz tam istediğiniz gibi olsun."
+        study heading: "Kutsal Kitap'ı çalışın."
+        study description: "En sevdiğiniz renkleri kullanarak <strong>vurgalayın</strong>, en sevdiğiniz Kutsal Kitap ayetleri <strong>yer imlerinize ekleyin</strong>, ve öğrendikleriniz hakkında notları yazın. Tanrı'nın Sözü ile vakit geçirmekten öte, Kutsal Kitap ile etkileşiminizin tarihini kaydediyorsunuz."
+        subscribe heading: "Kutsal Kitap okuma planlarına abone olun."
+        subscribe description: "Kutsal Kitap'ın tamamını okuyun. Belirli bir konuya odaklayın. Veya yetenekli bir hocanın düşüncelerini okuyun. Okuma Planınızı seçın. Her gün Kutsal Kitap'ın yeni bir bölümü sizin için hazır olsun."
+        download heading: "Kutsal Kitap'ı yanınızda bulundurun."
+        download description: "Kutsal Kitap Uygulamasını herhangi bir mobil cihaza bedavaya <a href='http://youversion.com/download'>indirin</a>. Mobil uygulamayı kullanırsanız notlarınız, yer imleriniz, vurgularınız, okuma planlarınız ve daha neler otomatik olarak tüm cihazlarınızda güncellenir."
+      get started: "Bedavaya kaydolup Kutsal Kitap kullanımınıza başlayın."
+      word with you: "Tanrı'nın Sözü yanınızda."
+      download action: "Kutsal Kitap Uygulamasını İndirin"
+      download description: "YouVersion Kutsal Kitap Uygulamasını mobil cihazınıza indirin. Kutsal Kitap nerede olursanız olun yanınızda olsun."
+      world installs: "Dünya çapındaki yüklemeler"
   shared:
     menu_settings:
-      title: "Ayarlarınız"
+      title: "Okuyucu Ayarları"
       close: "Kapat"
       font: "Yazıtipi"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Boyu:"
+      font size: "Yazı Boyu:"
       small: "Küçük"
       medium: "Orta"
       large: "Büyük"
-      highlights: "Vurgular:"
+      highlights: "Vurgular"
+      contrast: "Kontrast"
       'on': "Açık"
       'off': "Kapalı"
-      extras: "Ekstralar"
+      extras: "Ekstralar:"
       translation notes: "Dipnotlar"
       cross references: "İç Göndermeler"
   app errors:
@@ -652,6 +698,7 @@ tr:
     try again: "Yeninde dene"
   versions:
     filter: "Çevirileri Filtrele..."
+    see all: "Bütün Çevirileri Görüntüle..."
     courtesy of: "%{abbreviation} %{publisher} tarafından sunulmaktadır"
     learn more: "Daha Bilgi"
     index title: "Mevcut Çeviriler"
@@ -663,3 +710,5 @@ tr:
     number of languages field: "Toplam Dil:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Genel Alan"
+    loading: "Daha fazla Çeviri yükleniyor..."
+    load error: "Daha fazla çeviri yüklerken bir hata oluştu. Özür dileriz. Bu menüyü kapatıp yeniden açmaya deneyin."
