--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -46,7 +46,6 @@ vi:
   see users badges: "Xem tất cả huy hiệu của %{username}"
   followers: "Người theo"
   following: "Theo dõi"
-  highlight: "Tô màu"
   bookmark: "Đánh dấu"
   earned badge date: "Được %{username} nhận vào %{ago} trước"
   badges title: "Huy hiệu"
@@ -95,8 +94,13 @@ vi:
   search: "Tìm kiếm"
   book: "Sách"
   filter book: "Lựa sách..."
+  save: "Lưu"
+  cancel: "Hủy"
   try the beta: "Thử phiên bản Beta"
   welcome to the beta: "Chào mừng bạn đến với YouVersion.com phiên bản mới!"
+  highlight: "Tô màu"
+  comment: "Bình luận mới"
+  note: "Ghi chú mới"
   selected: "Đã chọn"
   chapter: "Đoạn"
   bible: "Kinh Thánh"
@@ -185,6 +189,8 @@ vi:
   users:
     unverified heading: "Gần xong rồi!"
     unverified message: "Hình như bạn đang cố đăng nhập với một tài khoản chưa được thiết lập hoàn chỉnh. Chỉ còn một bước nữa: nhấp vào đường dẫn trong email xác nhận từ YouVersion. Nếu bạn không tìm thấy nó, hãy kiểm tra hòm thư rác của bạn, hoặc yêu cầu <a href='%{resend_path}'>gởi lại email xác nhận</a>."
+    not following you: "Không theo bạn"
+    following you: "Đang theo bạn"
     reset connection: "Có lỗi kỹ thuật, xin hãy tháo bỏ và kết nối lại."
     settings: "Cài đặt"
     no connection friends: "Chưa có bạn bè nào của bạn trên %{connection} sử dụng YouVersion."
@@ -216,6 +222,7 @@ vi:
     my profile: "Hồ sơ của tôi"
     edit profile: "Chỉnh sửa hồ sơ"
     update profile: "Cập nhật hồ sơ"
+    other user profile: "Hồ sơ của %{username}"
     my password: "Đổi mật khẩu"
     edit password: "Đổi mật khẩu"
     picture: "Hình ảnh"
@@ -383,6 +390,7 @@ vi:
       publishing partners: "Hãy cập nhật cho tôi tin tức từ các đối tác nội dung của YouVersion."
       update: "Cập nhật các thông báo"
   bookmarks:
+    new: "Đánh dấu mới"
     edit: "Chỉnh sửa"
     delete: "Xóa đánh dấu này"
     title field: "Tựa đề"
@@ -440,6 +448,7 @@ vi:
     you have no plans: "Hiện giờ bạn chưa đăng ký kế hoạch nào."
     no public plans: "%{username} không có kế hoạch công khai nào."
     filter by lang: "Chọn lọc kế hoạch qua ngôn ngữ"
+    plan settings: "Điều chỉnh kế hoạch"
     settings: "Cài đặt"
     search: "Tìm kiếm"
     search placeholder: "Tìm kiếm %{category} Kế hoạch"
@@ -449,8 +458,10 @@ vi:
     reading completed _ mark and show next: "Kế tiếp: %{next_reference}"
     which reading: "%{current} trong %{total}"
     done reading: "Xong"
+    no verses: "Không có câu gốc cho hôm nay"
     no content: "Kế hoạch của bạn không có bài đọc cho hôm nay và được đánh dấu là \"đã hoàn tất\"."
     read today: "Xem phần đọc hôm nay"
+    devotional: "Tĩnh nguyện"
     completion status _ below percentage: "Hoàn tất"
     current progress html: "Ngày <b>%{day}</b> trong <b>%{total_days}</b> ngày"
     start date _ before date string: "Ngày bắt đầu:"
@@ -501,9 +512,11 @@ vi:
     catch up successful: "Bạn đã bắt kịp kế hoạch đọc của mình!"
     restart successful: "Kế hoạch của bạn đã được khởi động lại từ đầu."
     subscribe successful: "Chúc mừng bạn đã đăng ký kế hoạch này!"
+    day number: "Ngày %{day}"
     which day in plan: "Ngày %{day} trong %{total} ngày"
     must start to complete: "Bắt đầu kế hoạch này để lưu lại các phần đã đọc xong!"
     invalid reference: "Xin lỗi bạn, một trong các tham khảo Kinh Thánh này không có trong bản dịch được chọn. Hãy thử chọn một bản dịch khác ở trên. Nếu bạn vẫn nhận được thông báo này, hãy cho <a href='%{support_url}'>nhóm hỗ trợ</a> của chúng tôi biết."
+    sidebar notice: "Bạn đang xem một kế hoạch đọc."
   registration:
     placeholder:
       email: "Nhập địa chỉ email"
@@ -524,6 +537,7 @@ vi:
     chapter only: "Xin lỗi bạn, không có phát thanh cho đoạn này. Hãy xem mục lục để biết đoạn nào có."
     close player menu: "Đóng"
   highlights:
+    choose color: "Chọn màu"
     creation error: "Xin lỗi bạn, không tô màu được."
     delete error: "Xin lỗi bạn, không gỡ bỏ tô màu được."
   searching:
@@ -637,10 +651,10 @@ vi:
     home:
       hero:
         heading: "Kinh Thánh miễn phí trên thiết bị di động và máy bàn"
-        description: "YouVersion là ứng dụng Kinh Thánh giúp mang Lời Chúa vào đời sống hằng ngày của bạn."
-        learn more: "Tìm hiểu thêm dưới đây"
+        description: "YouVersion - Ứng dụng Kinh Thánh mang Lời Chúa vào đời sống hằng ngày của bạn"
+        learn more: "Tìm hiểu thêm bên dưới"
         start reading: "Bắt đầu đọc"
-        skip in future: "Bỏ trang này trong tương lai"
+        skip in future: "Bỏ qua trang này trong tương lai"
         now skipped: "Trang này sẽ được bỏ qua."
       features:
         read heading: "Đọc Kinh Thánh"
@@ -652,7 +666,7 @@ vi:
         download heading: "Mang Kinh Thánh theo bạn"
         download description: "<a href='http://youversion.com/download'>Tải</a> Ứng dụng Kinh Thánh miễn phí cho bất cứ thiết bị di động nào. Khi bạn sử dụng, toàn bộ ghi chú, đánh dấu, tô màu, kế hoạch... sẽ tự động đồng bộ hóa trong tất cả thiết bị của bạn."
       get started: "Bắt đầu với tài khoản miễn phí"
-      word with you: "Lời Chúa ở cùng bạn."
+      word with you: "Lời Chúa đồng hành cùng bạn"
       download action: "Tải Ứng dụng Kinh Thánh"
       download description: "Tải Ứng dụng Kinh Thánh miễn phí YouVersion về thiết bị di động của bạn và mang Kinh Thánh theo bất cứ nơi nào bạn đi."
       world installs: "Cài đặt trên toàn cầu"
@@ -670,6 +684,7 @@ vi:
       medium: "Trung bình"
       large: "Lớn"
       highlights: "Các tô màu"
+      contrast: "Tương phản"
       'on': "Bật"
       'off': "Tắt"
       extras: "Phụ mục:"
@@ -683,6 +698,7 @@ vi:
     try again: "Thử lại"
   versions:
     filter: "Lựa bản dịch..."
+    see all: "Xem toàn bộ bản dịch..."
     courtesy of: "%{abbreviation} được cung cấp bởi %{publisher}"
     learn more: "Tìm hiểu thêm"
     index title: "Các bản dịch có sẵn"
