--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -46,7 +46,6 @@ zh-CN:
   see users badges: "查看%{username} 的所有徽章"
   followers: "关注者"
   following: "关注"
-  highlight: "标记"
   bookmark: "书签"
   earned badge date: "%{username} 在 %{ago} 之前获得了徽章"
   badges title: "徽章"
@@ -95,8 +94,13 @@ zh-CN:
   search: "搜索"
   book: "书卷"
   filter book: "筛选书卷..."
+  save: "保存"
+  cancel: "取消"
   try the beta: "尝试测试版"
   welcome to the beta: "欢迎来到新版 YouVersion.com 网站！"
+  highlight: "标记"
+  comment: "新评论"
+  note: "新笔记"
   selected: "已选的"
   chapter: "章节"
   bible: "圣经"
@@ -185,6 +189,8 @@ zh-CN:
   users:
     unverified heading: "几乎完成了！"
     unverified message: "看起来您要登录的账户还未完全设置好。不过只差一步了：您只要点击从 YouVersion 发来的确认邮件里的账户验证连接就行了。若是找不到那份邮件，请查看一下您的垃圾邮件箱，或点击<a href='%{resend_path}'>重发确认邮件</a>。"
+    not following you: "没关注您"
+    following you: "在关注您"
     reset connection: "很抱歉，出错了！请移除这个连接然后重新连接！"
     settings: "设置"
     no connection friends: "您在 %{connection}上 的朋友现在不在 YouVersion 上。"
@@ -216,6 +222,7 @@ zh-CN:
     my profile: "我的个人资料"
     edit profile: "编辑个人资料"
     update profile: "更新个人资料"
+    other user profile: "%{用户名}的个人主页"
     my password: "更改密码"
     edit password: "更改密码"
     picture: "相片"
@@ -383,6 +390,7 @@ zh-CN:
       publishing partners: "YouVersion 的内容提供商有新的信息时及时通知我。"
       update: "更新通知"
   bookmarks:
+    new: "新书签"
     edit: "编辑"
     delete: "删除书签"
     title field: "标题"
@@ -440,6 +448,7 @@ zh-CN:
     you have no plans: "您没有订阅任何读经计划。"
     no public plans: "用户 %{username} 还没有公开的读经计划。"
     filter by lang: "按语言筛选读经计划"
+    plan settings: "读经计划设置"
     settings: "设置"
     search: "搜索"
     search placeholder: "搜索%{category}类的读经计划"
@@ -449,8 +458,10 @@ zh-CN:
     reading completed _ mark and show next: "下一个： %{next_reference}"
     which reading: "%{total}段中的第%{current}段"
     done reading: "完成"
+    no verses: "今天没有经文"
     no content: "您的读经计划在今天没有安排内容，因此被标记为已完成。"
     read today: "查看今日阅读内容"
+    devotional: "灵修"
     completion status _ below percentage: "完成"
     current progress html: "<b>%{total_days}</b>天中的第<b>%{day}</b>天"
     start date _ before date string: "开始日期："
@@ -501,21 +512,24 @@ zh-CN:
     catch up successful: "您现在已赶上进度！"
     restart successful: "读经计划已重新开始。"
     subscribe successful: "您已启用该读经计划。"
+    day number: "第%{day}天"
     which day in plan: "%{total}天中的第%{day}天"
     must start to complete: "请开始这个读经计划来保存已完成的读经！"
     invalid reference: "很抱歉！此读经计划中的参考经文可能不在您选择的圣经版本中。试着选择一个不同的圣经版本。如果您还是看到这条信息，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
+    sidebar notice: "您在查看读经计划"
   registration:
     placeholder:
       email: "输入您的电子邮件"
       username: "输入您的用户名"
       password: "输入您的密码"
-    with email: "用您的电子邮件注册"
+    with email: "使用您的电子邮件注册"
     with facebook: "通过 Facebook 账户注册"
     benefits title: "获取完整的体验"
     benefits blurb: "创建一个 YouVersion 账户可以让您使用更多的功能，比如书签和笔记。这些功能在任何您登录的设备上都能使用。有个账户还可以让您更方便地和朋友分享圣经。现在就花一两分钟来注册吧。"
     plan blurb: "看来您想开始一个读经计划！明智之举！读经计划可以帮助您，使圣经成为您日常生活中的一部分。赶紧创建一个账户或登录就可以开始了！"
     bookmark blurb: "看来您想使用书签功能！太好了！书签可以帮助您记忆、分享和标识您最喜欢的经句。赶紧创建一个账户或登录就可以开始了！"
     friends blurb: "看起来您想使用 YouVersion 和朋友互动交流。好主意！您可以和朋友分享读经内容，相互激励帮助跟进读经进度。登录或创建一个账户就可以开始了！"
+    share blurb: "看来您希望分享有关经文。太好了！您可以通过Facebook或Twitter及时分享神的话语。赶紧登录或注册一个免费账户就可以开始了！"
     highlight blurb: "看起来您想高亮显示一段经文，太棒了！高亮显示经文可以帮您记忆和整理您喜欢的经节。登录或创建一个账户然后赶紧开始吧！"
     note blurb: "看起来您想就经文写一段笔记，太棒了！读经笔记可以帮您记忆和整理圣经中的真理。登录或创建一个账户然后赶紧开始吧！"
   audio:
@@ -523,6 +537,7 @@ zh-CN:
     chapter only: "抱歉，经句不支持语音功能。请在阅读器里查看整章圣经的语音功能。"
     close player menu: "关闭"
   highlights:
+    choose color: "选择颜色"
     creation error: "抱歉，不能高亮显示。"
     delete error: "抱歉，无法取消高亮显示。"
   searching:
@@ -635,26 +650,26 @@ zh-CN:
       our action: "我们已经注意到这个问题并将尽快解决。"
     home:
       hero:
-        heading: "可用于手机、平板电脑或普通电脑上的免费圣经。"
+        heading: "可用于手机、平板电脑或电脑上的免费圣经"
         description: "YouVersion 是一款简单易用，且无广告的圣经软件，能将神的话语带入您的日常生活。"
         learn more: "若想了解详情，请继续往下阅读"
         start reading: "开始阅读"
         skip in future: "今后请自动跳过这一页"
         now skipped: "从现在开始，本页将被自动跳过。"
       features:
-        read heading: "阅读圣经。"
+        read heading: "阅读圣经"
         read description: "您可从<strong>数以百计的圣经版本和语言</strong>中任意选择，并排比较两个版本，甚至可以选择字体和显示尺寸，用你自己喜欢的方式来在线阅读圣经。"
-        study heading: "研读圣经。"
+        study heading: "研读圣经"
         study description: "用您喜爱的颜色来做<strong>高亮显示</ strong>，为您喜欢的圣经经节做<strong>标签</strong>，边阅读边做笔记。当您花时间在神的话语上时，其实也在同时建立您与圣经之间的亲密关系。"
-        subscribe heading: "订阅读经计划。"
+        subscribe heading: "订阅计划"
         subscribe description: "或覆盖整本圣经，或专注于一个主题，或跟从一个有恩赐的老师来灵修。选择一份读经计划，每一天就会有一段圣经供你阅读。"
-        download heading: "随身携带圣经。"
-        download description: "免费下载<a href='http://youversion.com/download'>圣经软件到任何移动设备。当您在一个移动设备上使用圣经软件时，您的笔记、书签、高亮显示和读经计划等都将自动同步到您的其他移动设备上。"
-      get started: "从开设您的免费账户开始。"
-      word with you: "神的话与你同在。"
+        download heading: "随身携带"
+        download description: "免费<a href='https://www.youversion.com/zh-CN/download'>下载</a>圣经软件到任何移动设备。当您在一个移动设备上使用圣经软件时，您的笔记、书签、高亮显示和读经计划等都将自动同步到您的其他移动设备上。"
+      get started: "注册免费账户，开始体验吧！"
+      word with you: "神的话语与您同在"
       download action: "下载圣经软件"
-      download description: "下载免费的 YouVersion 圣经软件到您的移动设备上，无论走到哪里，您的圣经都将伴着您。"
-      world installs: "在全球的安装量"
+      download description: "下载免费的 YouVersion 圣经软件到您的移动设备上吧！无论何时何地，神的话语都将伴您左右！"
+      world installs: "不断攀升的全球安装量"
   shared:
     menu_settings:
       title: "阅读器设置"
@@ -669,6 +684,7 @@ zh-CN:
       medium: "中"
       large: "大"
       highlights: "高亮显示"
+      contrast: "对比度"
       'on': "开"
       'off': "关"
       extras: "附加功能："
@@ -682,6 +698,7 @@ zh-CN:
     try again: "再试一次"
   versions:
     filter: "筛选版本..."
+    see all: "查看全部版本"
     courtesy of: "%{abbreviation}是由 %{publisher}提供"
     learn more: "获取更多信息"
     index title: "可用的版本"
