--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -46,7 +46,6 @@ en-GB:
   see users badges: "See all of %{username}'s badges"
   followers: "Followers"
   following: "Following"
-  highlight: "Highlight"
   bookmark: "Bookmark"
   earned badge date: "Earnt by %{username} %{ago} ago"
   badges title: "Badges"
@@ -95,8 +94,13 @@ en-GB:
   search: "Search"
   book: "Book"
   filter book: "Filter Books..."
+  save: "Save"
+  cancel: "Cancel"
   try the beta: "Try the Beta"
   welcome to the beta: "Welcome to the new YouVersion.com!"
+  highlight: "Highlight"
+  comment: "New Comment"
+  note: "New Note"
   selected: "Selected"
   chapter: "Chapter"
   bible: "Bible"
@@ -185,6 +189,8 @@ en-GB:
   users:
     unverified heading: "Almost Done!"
     unverified message: "It looks like you're trying to sign in to an account that hasn't been set up completely. You only have one more step: simply click on the verification link in the confirmation email you received from YouVersion. Can't find it? Check your spam folder or <a href='%{resend_path}'>resend the confirmation email</a>."
+    not following you: "Is not following you"
+    following you: "Is following you"
     reset connection: "Sorry, an error has occurred. Please remove and then reconnect this connection."
     settings: "Settings"
     no connection friends: "None of your %{connection} friends appear to be on YouVersion yet."
@@ -216,6 +222,7 @@ en-GB:
     my profile: "My Profile"
     edit profile: "Edit Profile"
     update profile: "Update Profile"
+    other user profile: "%{username}'s Profile"
     my password: "Change My Password"
     edit password: "Change Password"
     picture: "Picture"
@@ -383,6 +390,7 @@ en-GB:
       publishing partners: "Keep me updated on news from YouVersion's content partners."
       update: "Update Notifications"
   bookmarks:
+    new: "New Bookmark"
     edit: "Edit"
     delete: "Delete this Bookmark"
     title field: "Title"
@@ -440,6 +448,7 @@ en-GB:
     you have no plans: "You're not subscribed to any reading plans right now."
     no public plans: "No reading plans are visible for %{username}."
     filter by lang: "Filter Plans by Language"
+    plan settings: "Plan Settings"
     settings: "Settings"
     search: "Search"
     search placeholder: "Search %{category} Plans"
@@ -449,8 +458,10 @@ en-GB:
     reading completed _ mark and show next: "Next: %{next_reference}"
     which reading: "%{current} of %{total}"
     done reading: "Done"
+    no verses: "No verses for today"
     no content: "Your plan has no scheduled content for this day so it's been marked as completed."
     read today: "View Today's Reading"
+    devotional: "Devotional"
     completion status _ below percentage: "Complete"
     current progress html: "Day <b>%{day}</b> of <b>%{total_days}</b>"
     start date _ before date string: "Start Date:"
@@ -501,9 +512,11 @@ en-GB:
     catch up successful: "Success! You are now caught up on your reading."
     restart successful: "Your Plan has restarted from the beginning."
     subscribe successful: "Great! You're subscribed to this plan."
+    day number: "Day %{day}"
     which day in plan: "Day %{day} of %{total}"
     must start to complete: "Start this plan to save completed readings!"
     invalid reference: "Sorry, one of the scripture references for this reading may not exist in the selected version. Try selecting a different version, above. If you continue to see this message, please let our <a href='%{support_url}'>support team</a> know about the issue."
+    sidebar notice: "You are viewing a reading plan."
   registration:
     placeholder:
       email: "Enter your e-mail address"
@@ -524,6 +537,7 @@ en-GB:
     chapter only: "Sorry, audio isn't available for verses. View in the reader for chapter audio."
     close player menu: "Close"
   highlights:
+    choose color: "Choose Colour"
     creation error: "Sorry, couldn't highlight."
     delete error: "Sorry, couldn't remove highlighting."
   searching:
@@ -670,6 +684,7 @@ en-GB:
       medium: "Medium"
       large: "Large"
       highlights: "Highlights"
+      contrast: "Contrast"
       'on': "On"
       'off': "Off"
       extras: "Extras:"
@@ -683,6 +698,7 @@ en-GB:
     try again: "Try Again"
   versions:
     filter: "Filter Versions..."
+    see all: "See All Versions..."
     courtesy of: "%{abbreviation} brought to you by %{publisher}"
     learn more: "Learn More"
     index title: "Available Versions"
