--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -46,7 +46,6 @@ es:
   see users badges: "Ver todas las insignias de %{username}"
   followers: "Seguidores"
   following: "Siguiendo"
-  highlight: "Resaltar"
   bookmark: "Marcador"
   earned badge date: "Obtenida por %{username} hace %{ago}."
   badges title: "Insignias"
@@ -95,8 +94,13 @@ es:
   search: "Buscar"
   book: "Libro"
   filter book: "Filtrar Libros…"
+  save: "Guardar"
+  cancel: "Cancelar"
   try the beta: "Utilizar la Versión Beta"
   welcome to the beta: "¡Bienvenidos al nuevo YouVersion.com!"
+  highlight: "Resaltar Versículo"
+  comment: "Nuevo Comentario"
+  note: "Nueva Nota"
   selected: "Seleccionado"
   chapter: "Capítulo"
   bible: "Biblia"
@@ -121,6 +125,7 @@ es:
   recent versions: "Usado Recientemente"
   or:
     lower: "o"
+    upper: "O"
   likes:
     my likes: "Mis \"Me Gustan\""
     all likes: "Todos Mis \"Me Gustan\""
@@ -184,6 +189,8 @@ es:
   users:
     unverified heading: "¡Casi Termina!"
     unverified message: "Parece que esta intentando ingresar con una cuenta que aún no ha sido configurada completamente.  Solamente le hace falta un paso: Sencillamente haga clic sobre el vinculo de verificación que se encuentra en el email de confirmación que le fue enviado de YouVersion.  ¿No lo encuentra? Revise la carpeta de “spam” o “correo basura” ó bien <a href='%{resend_path}'>renvíe el correo de confirmación de la cuenta</a>."
+    not following you: "No le sigue"
+    following you: "Le sigue"
     reset connection: "Lo sentimos, ha ocurrido un error. Por favor, retire y vuelva a conectar esta conexión."
     settings: "Configuración"
     no connection friends: "Aparentemente ninguno de sus amigos de %{connection} está conectado a YouVersion aún."
@@ -215,6 +222,7 @@ es:
     my profile: "Mi Perfil"
     edit profile: "Editar Perfil"
     update profile: "Actualizar Perfil"
+    other user profile: "Perfil de %{username}"
     my password: "Cambiar Mi Contraseña"
     edit password: "Cambiar Contraseña"
     picture: "Fotografía"
@@ -382,6 +390,7 @@ es:
       publishing partners: "Mantenerme informado enviándome noticias/información de los Socios de contenido de YouVersion."
       update: "Actualizar Notificaciones"
   bookmarks:
+    new: "Nuevo Marcador"
     edit: "Editar"
     delete: "Eliminar este Marcador"
     title field: "Título"
@@ -439,6 +448,7 @@ es:
     you have no plans: "No está suscrito a ningún plan de lectura en este momento."
     no public plans: "No hay planes de lectura visibles para %{username}."
     filter by lang: "Filtrar Planes por Idioma"
+    plan settings: "Configuración del Plan"
     settings: "Configuración"
     search: "Buscar"
     search placeholder: "Buscar Planes de %{category} "
@@ -448,8 +458,10 @@ es:
     reading completed _ mark and show next: "Siguiente: %{next_reference}"
     which reading: "%{current} de %{total}"
     done reading: "Hecho"
+    no verses: "No hay versículos para hoy"
     no content: "Su plan no tiene contenido programado para este día, así que ha sido marcado como completo."
     read today: "Ver la Lectura de Hoy"
+    devotional: "Devocionales"
     completion status _ below percentage: "Finalizado"
     current progress html: "Día <b>%{day}</b> de <b>%{total_days}</b>"
     start date _ before date string: "Fecha de Inicio:"
@@ -500,21 +512,24 @@ es:
     catch up successful: "¡Felicidades! Usted se ha puesto al día en su lectura."
     restart successful: "Su plan se ha reiniciado desde el principio."
     subscribe successful: "¡Qué bien! Ahora está suscrito a este plan."
+    day number: "Día %{day}"
     which day in plan: "Dia %{day} de %{total}"
     must start to complete: "¡Iniciar este plan para salvar lecturas completadas!"
     invalid reference: "Lo siento, una de las refencias de la Escritura para esta lectura puede ser que no existe en la versión elegida. Intente seleccionar una versión diferente, arriba. Si usted continúa viendo este mensaje, por favor permita que nuestro <a href='%{support_url}'>support team</a>  conozca sobre el problema. "
+    sidebar notice: "Está revisando un plan de lectura"
   registration:
     placeholder:
       email: "Introduces tu correo electrónico"
       username: "Introduces tu nombre de usuario "
-      password: "Introduces tu contraseña"
-    with email: "Inscribes usando tu correo electrónico. "
-    with facebook: "Ingresar usando Facebook"
+      password: "Ingrese su contraseña"
+    with email: "Ingresar utilizando tu correo electrónico."
+    with facebook: "Ingresar utilizando Facebook"
     benefits title: "Obtenga la Experiencia Completa"
     benefits blurb: "Crear una cuenta en YouVersion le da acceso a más funciones como marcadores y notas. Éstas se mostrarán en cualquier dispositivo en el que usted inicie una sesión. Con una cuenta también se hace más fácil el poder compartir la Biblia con sus amigos, así que tome un minuto o dos y regístrese!"
     plan blurb: "Parece que usted quiere iniciar un Plan de Lectura. ¡Genial! Los planes le pueden ayudar a hacer de la Biblia parte de su vida diaria. ¡Ingrese, o cree una cuenta a continuación, e inicie esta maravillosa experiencia!"
     bookmark blurb: "Parece que usted quiere usar un marcador. ¡Fantástico! Los marcadores  le ayudan a mantener un registro de los versículos que usted quiere memorizar, compartir, o marcar como favoritos. ¡Ingrese, o cree una cuenta a continuación, e inicie esta maravillosa experiencia!"
     friends blurb: "Parece que usted desea interactuar con Amigos. ¡Buena idea! Usted será capaz de compartir lo que está aprendiendo y ayudar a otros a mantenerse enfocados en las metas de lectura. ¡Ingrese, o cree una cuenta a continuación, e inicie esta maravillosa experiencia!"
+    share blurb: "Desea compartir las escrituras. ¡Grandioso! Podrá compartirlas vía Facebook y Twitter.  Para iniciar ingrese, o cree su cuenta a continuación."
     highlight blurb: "Parece que usted quiere resaltar las Escrituras. !Grandioso! Los resaltadores le ayudarán a organizar y mantener un seguimiento de sus versículos favoritos. Entre o inicie una cuenta abajo, y ¡comience!"
     note blurb: "Parece que usted quiere tomar una nota acerca de Las Escrituras. ¡Muy bien pensado! Las Notas le pueden ayudar a recordar y organizar la verdad que usted descubra en la Palabra de Dios. Entre o inicie una cuenta abajo, y ¡comience!"
   audio:
@@ -522,6 +537,7 @@ es:
     chapter only: "Lo sentimos, el audio no está disponible para versículos. Vea en el lector para el audio del capitulo."
     close player menu: "Cerrar"
   highlights:
+    choose color: "Elija un color"
     creation error: "Si alguna vez se queda atrás en su lectura, ¡no se preocupe! Usted  siempre puede cambiar la lectura actual volviéndose a su última lectura completada."
     delete error: "Lo sentimos, no se pudo eliminar el resaltado."
   searching:
@@ -634,26 +650,26 @@ es:
       our action: "Hemos sido notificados acerca de esto y procederemos a solucionarlo tan pronto como sea posible."
     home:
       hero:
-        heading: "Una Biblia gratis en tu teléfono, tableta, y computadora. "
-        description: "Youversion es una Biblia gratis, sin anuncios, que trae la Palabra de Dios a tu vida diaria. "
-        learn more: "Aprende más abajo"
+        heading: "La Biblia gratis para tu teléfono, tableta, y computadora. "
+        description: "Youversion trae la Palabra de Dios a tu vida diaria, gratuitamente y sin anuncios."
+        learn more: "descubre más a continuación"
         start reading: "Iniciar lectura"
-        skip in future: "Ignoras esta página en el futuro. "
-        now skipped: "Esta página será ignorada. "
+        skip in future: "No mostrar esta página en el futuro. "
+        now skipped: "Esta página ya no será mostrada."
       features:
-        read heading: "Lees la Biblia. "
-        read description: "Eliges de <strong>hundreds of Bible versions and languages</strong>. Comparas dos versiones lado a lado. Hasta puedes elegir tu fuente y tamaño de pantalla. Creas tu experiencia de en línea de la Biblia justo como lo quieres. "
-        study heading: "Estudias la Biblia. "
-        study description: "<strong>Destacas</strong> En tu color favorito, <strong>marcas</strong> tus versos bíblicos favoritos, y tomas notas acerca de lo que estás aprendiendo. No solo estás pasando tiempo en la Palabra de Dios, estás construyendo una historia de tu interacción con la Biblia."
-        subscribe heading: "Subscribete a los planes de lectura de la Biblia. "
-        subscribe description: "Lees toda la Biblia, enfoces en un tema, o lees una devocional de un maestro dotado. Eliges tu plan y cada día hallarás una selección bíblica esperandote. "
-        download heading: "Tomas la Biblia contigo. "
-        download description: "<a href='http://youversion.com/download'>Descargas</a> la Biblia App gratuitamente en cualquier dispositivo móvil. Cuando usas la aplicación móvil, tus notas, marcadores, planes, y más serán automáticamente sincronizados en todos tus dispositivos. "
-      get started: "Empieces con tu cuenta gratis. "
-      word with you: "La Palabra de Dios es contigo. "
-      download action: "Descargas la Biblia App. "
-      download description: "Descargas la Biblia App gratis de Youversion en tu dispositivo móvil y tendrás tu Biblia contigo dondequiera que vayas. "
-      world installs: "Instala alrededor del mundo. "
+        read heading: "Lee la Biblia. "
+        read description: "Haz tu elección de entre <strong>cientos de Versiones Bíblicas</strong>. Compara dos versiones paralelamente. Elige el tipo y tamaño de letra. Personaliza a tu gusto tu experiencia de la Biblia en-línea."
+        study heading: "Estudia la Biblia. "
+        study description: "<strong>Resalta</strong> con tu color favorito, <strong>Marca</strong> tus versículos favoritos, y crea notas acerca de lo que estas aprendiendo. No solo estás invirtiendo tiempo en la Palabra de Dios, estás construyendo una historia de tu interacción con la Biblia."
+        subscribe heading: "Subscribete a los Planes de Lectura de la Biblia. "
+        subscribe description: "Lee toda la Biblia, enfócate en un tema, o lee un devocional de un buen maestro. Elige un Plan de Lectura y diariamente hallarás una selección bíblica esperando por ti."
+        download heading: "Lleva la Biblia Contigo. "
+        download description: "<a href=' http://www.youversion.com/descargar'>Descarga</a> la Biblia App gratuitamente en cualquier dispositivo móvil. Cuando utilizas la aplicación móvil, tus notas, marcadores, planes de lectura, y más, serán sincronizados automáticamente en todos tus dispositivos."
+      get started: "Inicia creando tu cuenta gratuitamente."
+      word with you: "Su Palabra está contigo. "
+      download action: "Descargar la Biblia App."
+      download description: "Descarga la Biblia App de YouVersion gratuitamente en tu dispositivo móvil y tendrás contigo la Biblia a dondequiera que vayas."
+      world installs: "Instalaciones alrededor del mundo. "
   shared:
     menu_settings:
       title: "Configuración del Lector"
@@ -668,6 +684,7 @@ es:
       medium: "Mediano"
       large: "Grande"
       highlights: "Resaltados"
+      contrast: "Contraste"
       'on': "Activado"
       'off': "Desactivado"
       extras: "Extras:"
@@ -681,8 +698,9 @@ es:
     try again: "Intente Nuevamente"
   versions:
     filter: "Filtrar Versiones..."
+    see all: "Ver Todas las Versiones"
     courtesy of: "%{abbreviation} presentada por %{publisher}"
-    learn more: "Aprender más"
+    learn more: "Aprender Más"
     index title: "Versiones Disponibles"
     publisher widget title: "Editor"
     visit publisher: "Visite la Página Web del Editor"
@@ -692,4 +710,5 @@ es:
     number of languages field: "Número total de idiomas:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Dominio público"
-    loading: "Descargando más versiones..."
+    loading: "Cargando Más versiones..."
+    load error: "Lo sentimos, hubo un problema técnico cargando más versiones. Cierre este menú e inicie nuevamente."
