--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -5,7 +5,7 @@ nl:
   site search: "YouVersion zoeken"
   auth error: "Sorry, er ging iets mis met je gebruikersnaam of wachtwoord. Log in bij YouVersion om door te gaan."
   download: "Downloaden"
-  visit link: "Naar link gaan"
+  visit link: "Bezoeken"
   about title: "Over YouVersion"
   make a donation: "Een bijdrage geven"
   thanks for your donation: "Bedankt voor je bijdrage!"
@@ -46,7 +46,6 @@ nl:
   see users badges: "Alle medailles van %{username} bekijken"
   followers: "Volgers"
   following: "Volgenden"
-  highlight: "Markering"
   bookmark: "Bladwijzer"
   earned badge date: "Door %{username} verdiend %{ago} geleden"
   badges title: "Medailles"
@@ -95,8 +94,13 @@ nl:
   search: "Zoeken"
   book: "Boek"
   filter book: "Op boeken filteren…"
+  save: "Opslaan"
+  cancel: "Annuleren"
   try the beta: "Probeer de bètaversie"
   welcome to the beta: "Welkom op het vernieuwde YouVersion.com!"
+  highlight: "Vers markeren"
+  comment: "Nieuwe reactie"
+  note: "Nieuwe notitie"
   selected: "Geselecteerd"
   chapter: "Hoofdstuk"
   bible: "Bijbel"
@@ -185,6 +189,8 @@ nl:
   users:
     unverified heading: "Bijna klaar!"
     unverified message: "Het lijkt erop dat je probeert om je in te loggen op een account dat nog niet volledig is ingesteld. Je hoeft nog maar één stap te voltooien: klikken op de bevestigingslink in de bevestigingse-mail die je van YouVersion hebt ontvangen. Kan je deze e-mail niet vinden? Controleer dan je spammap  of <a href='%{resend_path}'>ontvang een nieuwe bevestigingse-mail</a>."
+    not following you: "Volgt jou niet"
+    following you: "Volgt jou"
     reset connection: "Sorry, er is iets mis gegaan. Gelieve de verbinding te verwijderen en opnieuw te verbinden."
     settings: "Instellingen"
     no connection friends: "Geen van je %{connection}-vrienden lijkt YouVersion te gebruiken."
@@ -192,7 +198,7 @@ nl:
     profile form errors: "De volgende fout(en) zorgden ervoor dat je jouw profiel niet kon updaten:"
     email address: "E-mailadres"
     user name: "Gebruikersnaam"
-    agreement: "Ik ga akkoord met de YouVersion %{terms_link}."
+    agreement: "Ik ga akkoord met de %{terms_link} van YouVersion."
     terms and conditions: "Algemene voorwaarden"
     facebook sign up success: "Super! Je bent aangemeld via Facebook. Kies een YouVersion-gebruikersnaam en wachtwoord om verder te gaan."
     register: "Aanmelden"
@@ -216,6 +222,7 @@ nl:
     my profile: "Mijn profiel"
     edit profile: "Profiel bewerken"
     update profile: "Profiel bijwerken"
+    other user profile: "Profiel van %{username}"
     my password: "Mijn wachtwoorden veranderen"
     edit password: "Wachtwoord veranderen"
     picture: "Afbeelding"
@@ -383,6 +390,7 @@ nl:
       publishing partners: "Hou me op de hoogte van nieuws over YouVersion's inhoudelijke partners."
       update: "Meldingen bijwerken"
   bookmarks:
+    new: "Nieuwe bladwijzer"
     edit: "Bewerken"
     delete: "Deze bladwijzer verwijderen"
     title field: "Titel"
@@ -440,17 +448,20 @@ nl:
     you have no plans: "Je volgt geen op dit moment geen leesplannen."
     no public plans: "Er zijn geen leesplannen zichtbaar voor %{username}."
     filter by lang: "Leesplannen per taal filteren"
+    plan settings: "Leesplaninstellingen"
     settings: "Instellingen"
     search: "Zoeken"
-    search placeholder: "Zoek %{category} leesplannen"
+    search placeholder: "%{category} leesplannen doorzoeken"
     subscribe to plan: "Aan dit leesplan beginnen"
     previous day: "Vorige dag"
     next day: "Volgende dag"
     reading completed _ mark and show next: "Volgende: %{next_reference}"
     which reading: "%{current} van %{total}"
     done reading: "Klaar"
+    no verses: "Geen te lezen gedeeltes vandaag"
     no content: "Je leesplan heeft voor vandaag niets gepland, daarom is deze dag gemarkeerd als afgerond."
     read today: "De lezing van vandaag bekijken"
+    devotional: "Overdenking"
     completion status _ below percentage: "Afgerond"
     current progress html: "Dag <b>%{day}</b> van <b>%{total_days}</b>"
     start date _ before date string: "Begindatum:"
@@ -501,21 +512,24 @@ nl:
     catch up successful: "Gelukt! Je bent nu bij met je lezing."
     restart successful: "Je leesplan is vanaf het begin opnieuw begonnen."
     subscribe successful: "Geweldig! Je bent begonnen aan dit leesplan."
+    day number: "Dag %{day}"
     which day in plan: "Dag %{day} van %{total}"
     must start to complete: "Aan dit leesplan beginnen om afgeronde lezingen op te slaan!"
     invalid reference: "Sorry, een van de te lezen Schrift-verwijzingen voor deze lezing is niet beschikbaar in de gekozen vertaling. Probeer hierboven een andere vertaling te selecteren. Als je dit bericht blijft krijgen, laat het ons dan weten via ons <a href='%{support_url}'>ondersteuningsteam</a>"
+    sidebar notice: "Je bekijkt een leesplan."
   registration:
     placeholder:
       email: "Vul jouw e-mail adres in"
       username: "Vul jouw gebruikersnaam in"
       password: "Vul jouw wachtwoord in"
-    with email: "Meld je aan gebruik makend van je e-mail adres"
-    with facebook: "Met Facebook aanmelden"
-    benefits title: "De volledige ervaring krijgen"
+    with email: "Meld je aan met je e-mailadres"
+    with facebook: "Meld je aan via Facebook"
+    benefits title: "Volledige ervaring krijgen"
     benefits blurb: "Het aanmaken van een YouVersion-account geeft je toegang tot meer functies, zoals bladwijzers en notities. Deze worden weergegeven op elk apparaat waarop je bent aangemeld. Met een account wordt het ook makkelijker om de Bijbel te delen met je vrienden, dus neem een minuutje of twee en meld je aan!"
     plan blurb: "Je wil blijkbaar aan een leesplan beginnen. Slim! Leesplannen kunnen je helpen om de Bijbel een deel van je dagelijks leven te maken. Log in of maak hieronder een account aan, en ga aan de slag!"
     bookmark blurb: "Je wil blijkbaar een bladwijzer maken. Geweldig! Bladwijzers kunnen je helpen om de verzen bij te houden die je wil onthouden, delen of markeren. Log in of maak hieronder een account aan, en ga aan de slag!"
     friends blurb: "Het lijkt erop dat je met vrienden wil communiceren. Goed idee! Je zult dat wat je leert met elkaar kunnen delen om elkaar te helpen op het goede spoor te blijven met de gestelde leesdoelen. Log in of maak hieronder een account aan, en ga aan de slag!"
+    share blurb: "Het ziet eruit alsof je de Bijbel wil delen. Geweldig! Je kunt de Bijbel delen via Facebook en Twitter. Log in of maak hieronder een account aan en ga aan de slag!"
     highlight blurb: "Het ziet er naar uit dat je een vers wil markeren. Super! Markeringen helpen je bij het organiseren en bijhouden van je favoriete verzen. Log in of meld je hieronder aan voor een account, en ga aan de slag!"
     note blurb: "Het ziet er naar uit dat je een notitie wil maken over het Woord. Geweldig! Notities helpen je bij het onthouden en organiseren van wat je leert uit Gods Woord. Log in of meld je hieronder aan voor een account, en ga aan de slag!"
   audio:
@@ -523,6 +537,7 @@ nl:
     chapter only: "Sorry, de audiofunctie is niet beschikbaar voor verzen. Kijk in het leesvenster voor audio per hoofdstuk."
     close player menu: "Sluiten"
   highlights:
+    choose color: "Kleur kiezen"
     creation error: "Sorry, er kon geen markering gemaakt worden."
     delete error: "Sorry, de markering kon niet verwijderd worden."
   searching:
@@ -559,7 +574,7 @@ nl:
     zip: "Postcode"
     creation form errors: "De volgende fout(en) zorgden ervoor dat je bijdrage niet is doorgekomen:"
   download ad:
-    title: "De gratis Bijbel App downloaden"
+    title: "Download de gratis Bijbel App"
     line 1: "Honderden vertalingen in 100+"
     line 2: "verschillende talen - de Bijbel "
     line 3: "die overal met je meegaat. "
@@ -587,7 +602,7 @@ nl:
     facebook: "YouVersion op Facebook"
     twitter: "YouVersion op Twitter"
     support: "Hulp nodig met YouVersion?"
-    lead copy: "De Bijbel App is een gratis Bijbel gebaseerd op de online Bijbel op YouVersion.com. De app kan op bijna alle toestellen worden geïnstalleerd. De Bijbel App stelt gebruikers in staat om de Bijbel te lezen, verzen te delen op de sociale netwerken, bladwijzers te plaatsen bij favoriete passages, en meer&mdash;allemaal in een formaat dat past bij de toenemend mobiele levenstijl."
+    lead copy: "De Bijbel App is een gratis Bijbel gebaseerd op de online Bijbel op YouVersion.com. De app kan op bijna alle toestellen worden geïnstalleerd. De Bijbel App stelt gebruikers in staat om de Bijbel te lezen, verzen te delen op sociale netwerken, bladwijzers te plaatsen bij favoriete passages, en meer&mdash;allemaal in een formaat dat past bij de toenemend mobiele levenstijl."
     resources title: "Persbronnen"
     now title: "Vandaag in de YouVersion-gemeenschap"
     resources:
@@ -600,7 +615,7 @@ nl:
       logos: "YouVersion-logopakket"
       icons: "Bijbel App-icoon"
       infographic: "Infographic: Bijbel App-statistieken en -gebruik"
-      devices: "Afbeelding Collectie: Toestellen"
+      devices: "Afbeeldingsverzameling: Toestellen"
       lifestyle: "Afbeeldingsverzameling: Levensstijl"
       screencast: "YouVersion-screencast"
     links title: "In de media"
@@ -610,13 +625,13 @@ nl:
     h3 sub: "Wereldwijd beschikbaar in meer dan 100 talen."
     main: "Tientallen millioenen mensen gebruiken de Bijbel App om Gods Woord een deel van hun leven te maken. Download de gratis app en krijg toegang op je bladwijzers, notitities en leesplannen vanaf elke plek. Geniet van honderden vertalingen, inclusief audio, alles op je mobiele apparaat."
     button h4: "Ga naar youversion.com/download"
-    button h4 sub: "Op je mobiele apparaat"
+    button h4 sub: "op je mobiele apparaat"
     download now: "De Bijbel App nu downloaden"
     what people: "Wat mensen over de gratis Bijbel app zeggen…"
     t1: "Ik heb het Woord altijd bij me."
     t1 copy: "Ik heb bladwijzers geplaatst bij verzen die voor mij belangrijk zijn. Ik heb zelfs de Bijbel in een jaar helemaal uitgelezen dankzij de leesplannen."
     t2: "Leuk programma!"
-    t2 copy: "Deze app helpt mij om alles in orde te hebben en om elke dag in Gods Woord te lezen. Het is makkelijk te bedienen en biedt veel fucties. Ik ben er dol op!"
+    t2 copy: "Deze app helpt mij om alles in orde te hebben en om elke dag in Gods Woord te lezen. Hij is makkelijk te bedienen en biedt veel fucties. Ik ben er dol op!"
     t3: "Geweldige app."
     t3 copy: "Leuke app met een brede keuze aan Bijbels. De audio-Bijbels zijn ook geweldig en makkelijk te begrijpen."
     iphone ipad: "iPhone/iPad"
@@ -635,26 +650,26 @@ nl:
       our action: "We zijn ervan op de hoogte gesteld en we gaan er binnenkort mee aan de gang."
     home:
       hero:
-        heading: "Een gratis Bijbel op je telefoon, tablet, en computer."
-        description: "YouVersion is gratis, reclame vrij Bijbel die Gods Woord je dagelijks dichter bij God brengt."
-        learn more: "Leer meer hieronder"
-        start reading: "Met lezen beginnen"
-        skip in future: "Sla deze pagina over in de toekomst"
-        now skipped: "Deze pagina word nu overgeslaan."
+        heading: "Een gratis Bijbel op je telefoon, tablet en computer."
+        description: "YouVersion is een eenvoudige, reclamevrije Bijbel die Gods Woord in je dagelijkse leven brengt."
+        learn more: "lees hieronder meer"
+        start reading: "Begin met lezen"
+        skip in future: "Sla deze pagina in de toekomst over"
+        now skipped: "Deze pagina wordt nu overgeslaan."
       features:
         read heading: "Lees de Bijbel."
-        read description: "Maak een keuze uit <strong>honderden Bijbel edities en talen</strong>. Vergelijk twee verschillende versies naast elkaar. Ja kan zelf bepalen welke font je wil gebruiken en hou groot die moet zijn. Je bepaald zelf hoe je online Bijbel ervaring eruit ziet."
+        read description: "Maak een keuze uit <strong>honderden Bijbel-vertalingen en --talen</strong>. Vergelijk twee verschillende vertalingen naast elkaar. Je kan zelf bepalen welke letter je wil gebruiken en hoe groot die moet zijn. Je bepaalt zelf hoe je online Bijbel-ervaring eruit ziet."
         study heading: "Bestudeer de Bijbel."
-        study description: "<strong>Markeer</strong> in jouw lievelings-kleur, <strong>Bladwijzer</strong> je favoriete Bijbel verzen, en maak notities over wat jij hebt geleerd. Je spendeert niet alleen tijd in Gods Woord, je bouwt aan een geschiedenis van jouw interactie met de Bijbel."
-        subscribe heading: "Abonneer je aan Bijbel-leesplannen."
-        subscribe description: "Ga door de hele Bijbel, focus op een thema, of lees een overdenking van een getalenteerde leraar. Kies een leesplan en je zal iedere dag een Bijbel gedeelte vinden die op je wacht."
+        study description: "<strong>Markeer</strong> in jouw lievelingskleur, plaats <strong>bladwijzers</strong> bij je favoriete Bijbel-verzen en maak notities over wat jij hebt geleerd. Je brengt niet alleen tijd door met Gods Woord, je bouwt aan een geschiedenis van jouw interactie met de Bijbel."
+        subscribe heading: "Abonneer je op Bijbel-leesplannen."
+        subscribe description: "Lees de hele Bijbel, focus op een thema of lees een overdenking van een getalenteerde leraar. Kies een leesplan en elke dat staat er een Bijbel-gedeelte voor je klaar."
         download heading: "Neem de Bijbel met je mee."
-        download description: "<a href='http://youversion.com/download'>Download</a> de Bijbel App is gratis voor iedere toestel.Wanner je gebruik maakt van de mobile app, zullen je notities, bladwijzers, markeringen, leesplannen, en meer automatisch worden gesynced met al je toestellen. "
+        download description: "<a href='http://youversion.com/download'>Download</a> de Bijbel App is gratis voor ieder mobiel apparaat. Wanneer je gebruikmaakt van de mobiele app worden je notities, bladwijzers, markeringen, leesplannen en meer automatisch gesynchroniseerd met al je toestellen."
       get started: "Ga aan de slag met jouw gratis account."
-      word with you: "Gods Woord met jouw."
+      word with you: "Gods Woord is met jou."
       download action: "Download de Bijbel App"
-      download description: "Download de gratis Bijbel App op je mobiele toestel en je zal de Bijbel bij je hebben ongeacht waar je bent."
-      world installs: "Installaties over de hele wereld"
+      download description: "Download de gratis Bijbel App op je mobiele toestel en je hebt de Bijbel bij je, ongeacht waar je bent."
+      world installs: "Installaties wereldwijd"
   shared:
     menu_settings:
       title: "Leesvensterinstellingen"
@@ -669,6 +684,7 @@ nl:
       medium: "Middel"
       large: "Groot"
       highlights: "Markeringen"
+      contrast: "Contrast "
       'on': "Aan"
       'off': "Uit"
       extras: "Extra's:"
@@ -682,6 +698,7 @@ nl:
     try again: "Opnieuw proberen"
   versions:
     filter: "Op vertalingen filteren…"
+    see all: "Bekijk alle vertalingen…"
     courtesy of: "%{abbreviation} naar jou toe gebracht door %{publisher}"
     learn more: "Meer leren"
     index title: "Beschikbare vertalingen"
