--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -46,7 +46,6 @@ ro:
   see users badges: "Vezi toate insignele lui %{username}"
   followers: "Simpatizanți"
   following: "Simpatizezi"
-  highlight: "Evidențiază"
   bookmark: "Marcaj"
   earned badge date: "Primită de către %{username} cu %{ago} în urmă"
   badges title: "Insigne"
@@ -95,8 +94,13 @@ ro:
   search: "Caută"
   book: "Cartea"
   filter book: "Filtrare cărți..."
+  save: "Salvează"
+  cancel: "Anulează"
   try the beta: "Încearcă versiunea Beta"
   welcome to the beta: "Bine ai venit pe noul YouVersion.com!"
+  highlight: "Evidențiază verset"
+  comment: "Comentariu nou"
+  note: "Notiță nouă"
   selected: "Selectate"
   chapter: "Capitolul"
   bible: "Biblie"
@@ -185,6 +189,8 @@ ro:
   users:
     unverified heading: "Aproape gata!"
     unverified message: "Se pare că încerci să te autentifici pe un cont setat incomplet. Mai ai doar un pas: faci click pe legătura de verificare primită prin e-mail de la YouVersion. În caz că nu ai e-mail-ul în „Inbox”, verifică în „Spam” sau <a href='%{resend_path}'>retrimite e-mail de confirmare</a>."
+    not following you: "nu te simpatizează"
+    following you: "te simpatizează"
     reset connection: "Ne pare rău, s-a produs o eroare. Trebuie să ștergi și să refaci conexiunea."
     settings: "Setări"
     no connection friends: "Nici unul din prietenii %{connection} tăi nu s-a conectat încă pe YouVersion."
@@ -192,7 +198,7 @@ ro:
     profile form errors: "Următoarele erori au împiedicat actualizarea profilului tău:"
     email address: "Adresă e-mail"
     user name: "Nume de utilizator"
-    agreement: "Sunt de acord cu %{terms_link} YouVersion"
+    agreement: "De acord cu %{terms_link} YouVersion"
     terms and conditions: "termenii și condițiile"
     facebook sign up success: "Minunat! Te-ai autentificat cu Facebook. Alege un nume de utilizator și o parolă de YouVersion pentru a continua."
     register: "Înregistrare"
@@ -216,6 +222,7 @@ ro:
     my profile: "Profilul meu"
     edit profile: "Modifică profilul"
     update profile: "Actualizează profilul"
+    other user profile: "Profilul lui %{username}"
     my password: "Schimbă parola"
     edit password: "Schimbă parola"
     picture: "Fotografie"
@@ -383,6 +390,7 @@ ro:
       publishing partners: "Ține-mă la curent cu noutățile partenerilor YouVersion."
       update: "Actualizează notificările"
   bookmarks:
+    new: "Marcaj nou"
     edit: "Modifică"
     delete: "Șterge acest marcaj"
     title field: "Titlu"
@@ -440,6 +448,7 @@ ro:
     you have no plans: "Momentan nu ești abonat la niciun plan de citire."
     no public plans: "Nu există niciun plan de citire vizibil pentru %{username}."
     filter by lang: "Filtrează planurile după limbă"
+    plan settings: "Setările Planului"
     settings: "Setări"
     search: "Caută"
     search placeholder: "Caută planurile din %{category}"
@@ -449,8 +458,10 @@ ro:
     reading completed _ mark and show next: "Înainte: %{next_reference}"
     which reading: "%{current} din %{total}"
     done reading: "Terminat"
+    no verses: "Nu sunt versete pentru azi"
     no content: "Planul tău nu are conținut planificat pentru azi, prin urmare a fost marcat ca și încheiat."
     read today: "Vezi porțiunea pentru astăzi"
+    devotional: "Devotional"
     completion status _ below percentage: "Complet"
     current progress html: "Ziua <b>%{day}</b> din <b>%{total_days}</b>"
     start date _ before date string: "Data începerii:"
@@ -501,9 +512,11 @@ ro:
     catch up successful: "Ai început lectura cu succes!"
     restart successful: "Planul tău a fost reînceput."
     subscribe successful: "Minunat! Acum ești abonat la acest plan."
+    day number: "Ziua %{day}"
     which day in plan: "Ziua %{day} din %{total}"
     must start to complete: "Începe acest plan pentru a salva părțile citite."
     invalid reference: "Ne pare rău, este posibil ca unul din pasajele pentru azi să nu fie în versiunea selectată. Încearcă să selectezi o altă versiune de mai sus. Dacă vei vedea din nou acest mesaj, te rugăm să anunți <a href='%{support_url}'>echipa de asistență</a> în legătură cu această problemă."
+    sidebar notice: "Vizualizezi un plan de citire"
   registration:
     placeholder:
       email: "Introdu adresa de e-mail"
@@ -524,6 +537,7 @@ ro:
     chapter only: "Ne pare rău, nu există material audio pentru versete. Accesează partea audio pentru întregul capitol în cititor."
     close player menu: "Închide"
   highlights:
+    choose color: "Alege culoare"
     creation error: "Ne pare rău, nu se poate evidenția."
     delete error: "Ne pare rău, evidențierea nu poate fi eliminată."
   searching:
@@ -606,7 +620,7 @@ ro:
       screencast: "Screencast YouVersion"
     links title: "Legături către ariile de acoperire media"
   mobile page:
-    h2: "Cuvântul Lui Dumnezeu este cu tine."
+    h2: "Ai Scriptura mereu la tine."
     h3: "YouVersion este global"
     h3 sub: "Disponibil în peste 100 de limbi din toată lumea."
     main: "Zeci de milioane de oameni folosesc Aplicația Biblia&trade; pentru a petrece timp cu Cuvântul Lui Dumnezeu. Descarcă aplicațiile gratuite și accesează-ți marcajele, notițele și planurile de citire oriunde te afli. Bucură-te de sute de versiuni, inclusiv audio, pe toate dispozitivele tale mobile."
@@ -636,11 +650,11 @@ ro:
       our action: "Am fost înștiințați; vom rezolva cât mai curând."
     home:
       hero:
-        heading: "Biblie gratuită pe telefon, tabletă și computer."
-        description: "YouVersion este o Biblie curată, fără reclame, care îți aduce Cuvântul lui Dumnezeu în viața de zi cu zi."
+        heading: "Biblia gratuit pe telefon, tabletă și computer."
+        description: "Biblia YouVersion este o aplicație simplă, fără reclame, care îți aduce Cuvântul lui Dumnezeu în viața de zi cu zi."
         learn more: "află mai multe"
         start reading: "Începe să citești"
-        skip in future: "Pe viitor, sari peste această pagină"
+        skip in future: "Pe viitor, sari peste această pagină."
         now skipped: "Această pagină va fi sărită."
       features:
         read heading: "Citește Biblia."
@@ -670,6 +684,7 @@ ro:
       medium: "Mediu"
       large: "Mare"
       highlights: "Evidențieri"
+      contrast: "Contrast"
       'on': "Pornit"
       'off': "Oprit"
       extras: "Extras:"
@@ -683,6 +698,7 @@ ro:
     try again: "Încearcă din nou"
   versions:
     filter: "Filtrare versiuni..."
+    see all: "Vezi toate versiunile..."
     courtesy of: "%{abbreviation} îţi este oferit(ă) de %{publisher}"
     learn more: "Află mai mult"
     index title: "Versiuni disponibile"
