--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -46,7 +46,6 @@ sk:
   see users badges: "Zobraziť všetky odznaky používateľa %{username}"
   followers: "Nasledovníci"
   following: "Nasledovaní"
-  highlight: "Zvýrazniť"
   bookmark: "Pridať záložku"
   earned badge date: "Získal používateľ %{username} pred %{ago}"
   badges title: "Odznaky"
@@ -95,8 +94,13 @@ sk:
   search: "Hľadať"
   book: "Kniha"
   filter book: "Filtrovať knihy..."
+  save: "Uložiť"
+  cancel: "Zrušiť"
   try the beta: "Vyskúšajte beta verziu"
   welcome to the beta: "Vitajte na novej stránke YouVersion.com!"
+  highlight: "Zvýrazniť verš"
+  comment: "Nový komentár"
+  note: "Nová poznámka"
   selected: "Označené"
   chapter: "Kapitola"
   bible: "Biblia"
@@ -185,6 +189,8 @@ sk:
   users:
     unverified heading: "Takmer hotovo!"
     unverified message: "Zdá sa, že sa chcete prihlásiť s účtom, ktorého vytvorenie nebolo úplne dokončené. Zostáva už len posledný krok: jednoducho kliknite na overovací odkaz v potvrdzujúcom emaili, ktorý ste dostali od YouVersion. Nemôžete ho nájsť? Skontrolujte si svoj priečinok so spamom, alebo si nechajte potvrdzujúci email <a href='%{resend_path}'>preposlať ešte raz</a>."
+    not following you: "Nenasleduje vás"
+    following you: "Nasleduje vás"
     reset connection: "Prepáčte, vyskytla sa chyba. Prosím odstráňte toto pripojenie a znova ho pridajte."
     settings: "Nastavenia"
     no connection friends: "Žiadny z vašich %{connection} priateľov ešte nie je zaregistrovaný na YouVersion."
@@ -216,6 +222,7 @@ sk:
     my profile: "Môj profil"
     edit profile: "Upraviť profil"
     update profile: "Aktualizovať profil"
+    other user profile: "Profil používateľa %{username}"
     my password: "Zmeniť heslo"
     edit password: "Zmeniť heslo"
     picture: "Obrázok"
@@ -383,6 +390,7 @@ sk:
       publishing partners: "Informujte ma o novinkách od partnerov YouVersion."
       update: "Aktualizovať notifikácie"
   bookmarks:
+    new: "Nová záložka"
     edit: "Upraviť"
     delete: "Odstrániť túto záložku"
     title field: "Názov"
@@ -440,6 +448,7 @@ sk:
     you have no plans: "Momentálne nemáte žiadne plány čítania."
     no public plans: "Pre používateľa %{username} nie sú viditeľné žiadne plány čítania."
     filter by lang: "Filtrovať plány podľa jazyka"
+    plan settings: "Nastavenia plánu"
     settings: "Nastavenia"
     search: "Hľadať"
     search placeholder: "Hľadať plány z kategórie %{category}"
@@ -449,15 +458,17 @@ sk:
     reading completed _ mark and show next: "Ďalej: %{next_reference}"
     which reading: "%{current} z %{total}"
     done reading: "Hotovo"
+    no verses: "Žiadne verše na dnes"
     no content: "Váš plán nemá na dnes naplánované žiadne čítanie, a preto bol označený ako dokončený."
     read today: "Zobraziť dnešné čítanie"
+    devotional: "Zamyslenia"
     completion status _ below percentage: "Dokončené"
     current progress html: "Deň <b>%{day}</b> z <b>%{total_days}</b>"
     start date _ before date string: "Dátum začiatku:"
     end date _ before date string: "Dátum ukončenia:"
     are you behind: "Zaostávate?"
     do you want to reset: "Skúsite radšej začať ešte raz?"
-    catch up text: "Presunúť dnešné čítanie na posledný dokončený deň (%{last_completed_day}.deň plánu)"
+    catch up text: "Presunúť dnešné čítanie na posledný dokončený deň (%{last_completed_day}. deň plánu)"
     catch up description only: "Ak nebudete stíhať čítať podľa určených dní, netrápte sa! Váš plán si vždy môžete prispôsobiť tým, že sa dnešné čítanie presunie na posledný dokončený deň."
     catch me up: "Prispôsobiť plán"
     restart description: "Váš plán môžete reštartovať. Všetka história čítania sa zmaže a začnete čítanie odznova."
@@ -501,9 +512,11 @@ sk:
     catch up successful: "Hotovo! Odteraz čítate znova načas."
     restart successful: "Váš plán bol reštartovaný odznova."
     subscribe successful: "Výborne! Začali ste čítať tento plán."
+    day number: "Deň %{day}"
     which day in plan: "Deň %{day} z %{total}"
     must start to complete: "Aby ste si mohli zaznačiť prečítaný úsek, je potrebné začať tento plán čítania!"
     invalid reference: "Prepáčte, v tomto preklade nie sú dostupné jedny, alebo viacero súradníc zo zvoleného čítania. Skúste si z ponuky vyššie zvoliť iný preklad. Ak sa aj napriek tomu táto hláška opakuje, dajte o tom prosím vedieť nášmu <a href='%{support_url}'>tímu podpory</a>."
+    sidebar notice: "Máte zobrazený plán čítania."
   registration:
     placeholder:
       email: "Zadajte vašu emailovú adresu"
@@ -524,6 +537,7 @@ sk:
     chapter only: "Prepáčte, audio funkcia nie je dostupná pre jednotlivé verše. Začnite čítať kapitolu, kde vám bude následne ponúknutá audio ikona."
     close player menu: "Zatvoriť"
   highlights:
+    choose color: "Vyberte farbu"
     creation error: "Prepáčte, nepodarilo sa zvýrazniť."
     delete error: "Prepáčte, nepodarilo sa odstrániť zvýraznenie."
   searching:
@@ -636,22 +650,22 @@ sk:
       our action: "Na chybu sme boli upozornení a pozrieme sa na ňu hneď, ako to bude možné."
     home:
       hero:
-        heading: "Bezplatná Biblia vo vašom telefóne, tablete, či počítači."
+        heading: "Biblia vo vašom telefóne, tablete, či počítači."
         description: "YouVersion je jednoduchá a bezplatná Biblia, ktorá prináša Božie Slovo do vášho každodenného života."
-        learn more: "zistite viac nižšie"
-        start reading: "Začať čítať"
+        learn more: "si pozrite bližšie informácie"
+        start reading: "Začnite čítať"
         skip in future: "Túto stránku nabudúce preskočiť"
         now skipped: "Táto stránka bude vynechaná."
       features:
         read heading: "Čítajte Bibliu."
-        read description: "Vyberte si zo <strong>stoviek prekladov Biblie v mnohých jazykoch</strong>. Porovnávajte paralelne dva preklady. Nastavte si vlastný typ písma a veľkosť. Prispôsobte si online Bibliu tak, ako vám to vyhovuje."
+        read description: "Vyberte si zo <strong>stoviek prekladov Biblie v mnohých jazykoch</strong>. Porovnávajte paralelne dva preklady. Nastavte si vlastný typ písma a veľkosť. Prispôsobte si svoju online Bibliu tak, ako vám to vyhovuje."
         study heading: "Študujte Bibliu."
-        study description: "<strong>Zvýraznite</strong> si verše vašou obľúbenou farbou, pridajte si ich medzi <strong>záložky</strong> a robte si poznámky o tom, čo vám čítanie dalo. Nie len že tak budete tráviť čas s Božím Slovom, môžete si tým aj tvoriť záznamy svojej interakcie s Bibliou."
+        study description: "<strong>Zvýraznite</strong> si verše vašou obľúbenou farbou, pridajte si ich medzi <strong>záložky</strong> a robte si poznámky o tom, čo vás zaujalo. Okrem trávenia času s Božím Slovom si tak môžete tvoriť denník toho, čo vás oslovilo"
         subscribe heading: "Využite plány čítania."
-        subscribe description: "Prejdite celú Bibliu, zamerajte sa len na jednu tému, alebo si prečítajte úseky vybrané nadanými učiteľmi. Zvoľte si váš plán a každý deň vás bude čakať pasáž Biblie."
+        subscribe description: "Zamerajte sa na jednu tému, prejdite celú Bibliu, alebo si prečítajte nami vybrané úseky. Zvoľte si váš plán a každý deň vás bude čakať pasáž Biblie."
         download heading: "Vezmite si Bibliu so sebou."
-        download description: "<a href='http://youversion.com/download'>Stiahnite si</a> bezplatnú Aplikáciu Biblia na akékoľvek mobilné zariadenie. Keď používate túto mobilnú aplikáciu, vaše poznámky, záložky, zvýraznenia a plány sa automaticky synchronizujú so všetkymi vašimi zariadeniami."
-      get started: "Začnite s vašim bezplatným účtom."
+        download description: "<a href='http://youversion.com/download'>Stiahnite si</a> bezplatnú Aplikáciu Biblia na akékoľvek mobilné zariadenie a vaše poznámky, záložky, zvýraznenia a plány sa budú automaticky synchronizovať so všetkymi vašimi zariadeniami."
+      get started: "Začnite vytvorením vášho bezplatného účtu."
       word with you: "Božie Slovo je s vami."
       download action: "Stiahnite si aplikáciu Biblia"
       download description: "Stiahnite si bezplatnú aplikáciu YouVersion Biblia do vášho mobilného zariadenia a Bibliu budete mať so sebou kamkoľvek pôjdete."
@@ -670,6 +684,7 @@ sk:
       medium: "Stredné"
       large: "Veľké"
       highlights: "Zvýraznenia"
+      contrast: "Kontrast"
       'on': "Zapnuté"
       'off': "Vypnuté"
       extras: "Ďalšie:"
@@ -683,6 +698,7 @@ sk:
     try again: "Skúste znova"
   versions:
     filter: "Filtrovať preklady..."
+    see all: "Zobraziť všetky preklady..."
     courtesy of: "%{abbreviation} Vám prináša %{publisher}"
     learn more: "Zistiť viac"
     index title: "Dostupné preklady"
